@@ -23,9 +23,7 @@ import com.vladmihalcea.hibernate.type.array.StringArrayType;
 import org.apache.camel.builder.RouteBuilder;
 import org.hibernate.Session;
 import org.hibernate.jdbc.AbstractReturningWork;
-import org.openremote.agent.protocol.ProtocolClientEventService;
 import org.openremote.container.message.MessageBrokerService;
-import org.openremote.container.persistence.PersistenceEvent;
 import org.openremote.container.persistence.PersistenceService;
 import org.openremote.container.security.AuthContext;
 import org.openremote.container.timer.TimerService;
@@ -38,13 +36,12 @@ import org.openremote.manager.web.ManagerWebService;
 import org.openremote.model.Constants;
 import org.openremote.model.Container;
 import org.openremote.model.ContainerService;
+import org.openremote.model.PersistenceEvent;
 import org.openremote.model.asset.*;
 import org.openremote.model.asset.impl.GroupAsset;
 import org.openremote.model.attribute.Attribute;
 import org.openremote.model.attribute.AttributeEvent;
 import org.openremote.model.attribute.AttributeMap;
-import org.openremote.model.attribute.AttributeState;
-import org.openremote.model.event.TriggeredEventSubscription;
 import org.openremote.model.event.shared.AssetInfo;
 import org.openremote.model.event.shared.EventRequestResponseWrapper;
 import org.openremote.model.event.shared.EventSubscription;
@@ -54,20 +51,19 @@ import org.openremote.model.query.LogicGroup;
 import org.openremote.model.query.filter.*;
 import org.openremote.model.security.ClientRole;
 import org.openremote.model.security.User;
-import org.openremote.model.util.AssetModelUtil;
 import org.openremote.model.util.Pair;
 import org.openremote.model.util.TextUtil;
-import org.openremote.model.value.Values;
+import org.openremote.model.util.ValueUtil;
+import org.openremote.model.value.MetaItemType;
 import org.postgresql.util.PGobject;
 
 import javax.persistence.EntityManager;
 import javax.persistence.NoResultException;
+import javax.persistence.Query;
 import javax.persistence.TypedQuery;
 import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
-import java.lang.reflect.Field;
 import java.sql.*;
-import java.util.Date;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiConsumer;
@@ -77,18 +73,15 @@ import java.util.function.Supplier;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.stream.IntStream;
 
 import static java.util.stream.Collectors.groupingBy;
-import static org.apache.camel.builder.PredicateBuilder.or;
-import static org.openremote.container.persistence.PersistenceEvent.PERSISTENCE_TOPIC;
-import static org.openremote.container.persistence.PersistenceEvent.isPersistenceEventForEntityType;
+import static org.openremote.container.persistence.PersistenceService.PERSISTENCE_TOPIC;
+import static org.openremote.container.persistence.PersistenceService.isPersistenceEventForEntityType;
 import static org.openremote.manager.event.ClientEventService.CLIENT_EVENT_TOPIC;
-import static org.openremote.manager.event.ClientEventService.HEADER_REQUEST_RESPONSE_MESSAGE_ID;
 import static org.openremote.model.attribute.Attribute.getAddedOrModifiedAttributes;
 import static org.openremote.model.query.AssetQuery.*;
-import static org.openremote.model.query.AssetQuery.Access.PRIVATE;
-import static org.openremote.model.query.AssetQuery.Access.PROTECTED;
+import static org.openremote.model.query.AssetQuery.Access.*;
 import static org.openremote.model.query.filter.ValuePredicate.asPredicateOrTrue;
 import static org.openremote.model.util.TextUtil.isNullOrEmpty;
 import static org.openremote.model.value.MetaItemType.ACCESS_PUBLIC_READ;
@@ -113,7 +106,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         }
     }
 
-    protected interface ParameterBinder extends BiConsumer<EntityManager, org.hibernate.query.Query<Object[]>> {
+    public interface ParameterBinder extends BiConsumer<EntityManager, org.hibernate.query.Query<Object[]>> {
 
         @Override
         default void accept(EntityManager em, org.hibernate.query.Query<Object[]> st) {
@@ -129,24 +122,25 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
     private static final Logger LOG = Logger.getLogger(AssetStorageService.class.getName());
     public static final int PRIORITY = MED_PRIORITY;
-    protected static final Field assetParentNameField;
-    protected static final Field assetParentTypeField;
+//    protected static final Field assetParentNameField;
+//    protected static final Field assetParentTypeField;
+//
+//    static {
+//        try {
+//            assetParentNameField = Asset.class.getDeclaredField("parentName");
+//            assetParentNameField.setAccessible(true);
+//            assetParentTypeField = Asset.class.getDeclaredField("parentType");
+//            assetParentTypeField.setAccessible(true);
+//        } catch (NoSuchFieldException e) {
+//            LOG.log(Level.SEVERE, "Failed to find Asset parentName and/or parentType fields in the Asset class", e);
+//            throw new IllegalStateException();
+//        }
+//    }
 
-    static {
-        try {
-            assetParentNameField = Asset.class.getDeclaredField("parentName");
-            assetParentNameField.setAccessible(true);
-            assetParentTypeField = Asset.class.getDeclaredField("parentType");
-            assetParentTypeField.setAccessible(true);
-        } catch (NoSuchFieldException e) {
-            LOG.log(Level.SEVERE, "Failed to find Asset parentName and/or parentType fields in the Asset class", e);
-            throw new IllegalStateException();
-        }
-    }
-
+    @SuppressWarnings("unchecked")
     public static <T extends SharedEvent & AssetInfo> EventSubscriptionAuthorizer assetInfoAuthorizer(ManagerIdentityService identityService, AssetStorageService assetStorageService) {
 
-         return (auth, sub) -> {
+         return (requestRealm, auth, sub) -> {
 
              @SuppressWarnings("unchecked")
              EventSubscription<T> subscription = (EventSubscription<T>)sub;
@@ -156,34 +150,52 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                  return false;
              }
 
-             AssetFilter<T> filter = (AssetFilter<T>) subscription.getFilter();
-
-             // Superuser can get events for any asset
-             if (auth.isSuperUser())
+             // Superuser can get events for any asset in any realm
+             if (auth != null && auth.isSuperUser()) {
                  return true;
-
-             // Regular user must have role
-             if (!auth.hasResourceRole(ClientRole.READ_ASSETS.getValue(), Constants.KEYCLOAK_CLIENT_ID)) {
-                 return false;
              }
 
-             boolean isRestrictedUser = identityService.getIdentityProvider().isRestrictedUser(auth.getUserId());
-
+             AssetFilter<T> filter = (AssetFilter<T>) subscription.getFilter();
              if (filter == null) {
                  filter = new AssetFilter<>();
                  subscription.setFilter(filter);
              }
 
-             // Regular and restricted users can only subscribe to assets in their realm
-             filter.setRealm(auth.getAuthenticatedRealm());
+             requestRealm = filter.getRealm() != null ? filter.getRealm() : requestRealm;
+             boolean isAnonymous = auth == null;
+             boolean isRestricted = identityService.getIdentityProvider().isRestrictedUser(auth);
+             String userId = !isAnonymous ? auth.getUserId() : null;
+             String realm = requestRealm != null ? requestRealm : !isAnonymous ? auth.getAuthenticatedRealmName() : null;
 
-             // Restricted user can only subscribe to assets they are linked to
+             if (realm == null) {
+                 LOG.fine("Anonymous subscriptions must specify a realm");
+                 return false;
+             }
+
+             if (isAnonymous || (requestRealm != null && !requestRealm.equals(auth.getAuthenticatedRealmName()))) {
+                 // Users can only request public assets in different realms so force public events in the filter
+                 filter.setPublicEvents(true);
+             }
+
+             // Regular user must have role
+             if (!filter.isPublicEvents() && (isAnonymous || !auth.hasResourceRole(ClientRole.READ_ASSETS.getValue(), Constants.KEYCLOAK_CLIENT_ID))) {
+                 return false;
+             }
+
+             filter.setRealm(realm);
+
+             if (!filter.isRestrictedEvents() && isRestricted) {
+                 filter.setRestrictedEvents(true);
+             }
+
+             // Restricted user can only subscribe to assets they are linked to so go fetch these
+             // TODO: Update asset IDs when user asset links are modified
              boolean skipAssetIdCheck = false;
-             if (isRestrictedUser && (filter.getAssetIds() == null || filter.getAssetIds().length == 0)) {
+             if (isRestricted && (filter.getAssetIds() == null || filter.getAssetIds().length == 0)) {
                  filter.setAssetIds(
-                     assetStorageService.findUserAssets(auth.getAuthenticatedRealm(), auth.getUserId(), null)
+                     assetStorageService.findUserAssetLinks(realm, userId, null)
                          .stream()
-                         .map(userAsset -> userAsset.getId().getAssetId())
+                         .map(userAssetLink -> userAssetLink.getId().getAssetId())
                          .toArray(String[]::new)
                  );
                  skipAssetIdCheck = true;
@@ -196,14 +208,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                      // If the asset doesn't exist, subscription must fail
                      if (asset == null)
                          return false;
-                     if (isRestrictedUser) {
+                     if (isRestricted) {
                          // Restricted users can only get events for their linked assets
-                         if (!assetStorageService.isUserAsset(auth.getUserId(), assetId))
+                         if (!assetStorageService.isUserAsset(userId, assetId))
                              return false;
-                         // TODO Restricted clients should only receive events for PROTECTED attributes!
                      } else {
                          // Regular users can only get events for assets in their realm
-                         if (!asset.getRealm().equals(auth.getAuthenticatedRealm()))
+                         if (!asset.getRealm().equals(realm))
                              return false;
                      }
                  }
@@ -305,24 +316,43 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         gatewayService = container.getService(GatewayService.class);
         EventSubscriptionAuthorizer assetEventAuthorizer = AssetStorageService.assetInfoAuthorizer(identityService, this);
 
-        clientEventService.addSubscriptionAuthorizer((auth, subscription) -> {
+        clientEventService.addSubscriptionAuthorizer((realm, auth, subscription) -> {
              if (!subscription.isEventType(AssetEvent.class)) {
                  return false;
              }
 
-            return assetEventAuthorizer.apply(auth, subscription);
+            return assetEventAuthorizer.authorise(realm, auth, subscription);
         });
 
-        container.getService(ManagerWebService.class).getApiSingletons().add(
+        clientEventService.addEventAuthorizer((realm, auth, event) -> {
+            boolean authorize = event instanceof HasAssetQuery;
+
+            if (event instanceof ReadAssetEvent readAssetEvent) {
+                if (readAssetEvent.getAssetQuery() == null) {
+                    LOG.fine("Read asset event must specify an asset ID");
+                    return false;
+                }
+            } else if (event instanceof ReadAttributeEvent readAttributeEvent) {
+                if (readAttributeEvent.getAssetQuery() == null) {
+                    LOG.fine("Read attribute event must specify an asset ID");
+                    return false;
+                }
+            }
+
+            return authorize && authorizeAssetQuery(((HasAssetQuery)event).getAssetQuery(), auth, realm);
+        });
+
+        container.getService(ManagerWebService.class).addApiSingleton(
             new AssetResourceImpl(
                 container.getService(TimerService.class),
                 identityService,
                 this,
-                container.getService(MessageBrokerService.class)
+                container.getService(MessageBrokerService.class),
+                clientEventService
             )
         );
 
-        container.getService(ManagerWebService.class).getApiSingletons().add(
+        container.getService(ManagerWebService.class).addApiSingleton(
             new ConsoleResourceImpl(container.getService(TimerService.class),
                 identityService,
                 this,
@@ -354,102 +384,122 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         // React if a client wants to read assets and attributes
         from(CLIENT_EVENT_TOPIC)
             .routeId("FromClientReadRequests")
-            .filter(
-                or(body().isInstanceOf(ReadAssetsEvent.class), body().isInstanceOf(ReadAssetEvent.class), body().isInstanceOf(ReadAttributeEvent.class)))
-            .choice()
-                .when(or(body().isInstanceOf(ReadAssetEvent.class), body().isInstanceOf(ReadAttributeEvent.class)))
-                    .process(exchange -> {
-                        LOG.finer("Handling from client: " + exchange.getIn().getBody());
+            .filter(body().isInstanceOf(HasAssetQuery.class))
+            .process(exchange -> {
+                HasAssetQuery hasAssetQuery = exchange.getIn().getBody(HasAssetQuery.class);
+                AssetQuery assetQuery = hasAssetQuery.getAssetQuery();
+                String sessionKey = ClientEventService.getSessionKey(exchange);
+                String messageId = exchange.getIn().getHeader(ClientEventService.HEADER_REQUEST_RESPONSE_MESSAGE_ID, String.class);
+                Object response = null;
 
-                        String assetId;
-                        String attributeName = null;
+                if (hasAssetQuery instanceof ReadAssetsEvent) {
+                    List<Asset<?>> assets = findAll(assetQuery);
+                    response = new AssetsEvent(assets);
+                } else {
+                    Asset<?> asset = find(assetQuery);
+                    String assetId;
+                    String attributeName = null;
 
-                        if (exchange.getIn().getBody() instanceof ReadAssetEvent) {
-                            assetId = exchange.getIn().getBody(ReadAssetEvent.class).getAssetId();
+                    if (asset != null) {
+                        if (hasAssetQuery instanceof ReadAttributeEvent readAttributeEvent) {
+                            assetId = readAttributeEvent.getAttributeRef().getId();
+                            attributeName = readAttributeEvent.getAttributeRef().getName();
                         } else {
-                            ReadAttributeEvent assetAttributeEvent = exchange.getIn().getBody(ReadAttributeEvent.class);
-                            assetId = assetAttributeEvent.getAttributeRef().getId();
-                            attributeName = assetAttributeEvent.getAttributeRef().getName();
+                            assetId = ((ReadAssetEvent) hasAssetQuery).getAssetId();
                         }
 
-                        if (TextUtil.isNullOrEmpty(assetId)) {
-                            return;
-                        }
-
-                        boolean isAttributeRead = !TextUtil.isNullOrEmpty(attributeName);
-                        String sessionKey = ProtocolClientEventService.getSessionKey(exchange);
-                        AuthContext authContext = exchange.getIn().getHeader(Constants.AUTH_CONTEXT, AuthContext.class);
-
-                        // Superuser can get all, User must have role
-                        if (!authContext.isSuperUser() && !authContext.hasResourceRole(ClientRole.READ_ASSETS.getValue(), Constants.KEYCLOAK_CLIENT_ID)) {
-                            return;
-                        }
-
-                        Access access = authContext.isSuperUser() || !identityService.getIdentityProvider().isRestrictedUser(authContext.getUserId()) ? PRIVATE : PROTECTED;
-
-                        Asset<?> asset = find(
-                            new AssetQuery()
-                                .ids(assetId)
-                                .select(new Select().excludePath(true).excludeParentInfo(true))
-                                .access(access));
-
-                        if (asset != null) {
-                            String messageId = exchange.getIn().getHeader(HEADER_REQUEST_RESPONSE_MESSAGE_ID, String.class);
-                            Object response = null;
-
-                            if (isAttributeRead) {
-                                Attribute<?> assetAttribute = asset.getAttributes().get(attributeName).orElse(null);
-                                if (assetAttribute != null) {
+                        if (!TextUtil.isNullOrEmpty(attributeName)) {
+                            Attribute<?> assetAttribute = asset.getAttributes().get(attributeName).orElse(null);
+                            if (assetAttribute != null) {
+                                // Check access constraints
+                                if (assetQuery.access == null
+                                    || assetQuery.access == PRIVATE
+                                    || (assetQuery.access == PUBLIC && assetAttribute.getMetaValue(ACCESS_PUBLIC_READ).orElse(false))
+                                    || (assetQuery.access == PROTECTED && assetAttribute.getMetaValue(ACCESS_RESTRICTED_READ).orElse(false))) {
                                     response = new AttributeEvent(assetId, attributeName, assetAttribute.getValue().orElse(null), assetAttribute.getTimestamp().orElse(0L));
                                 }
-                            } else {
-                                response = new AssetEvent(AssetEvent.Cause.READ, asset, null);
                             }
-
-                            if (response != null) {
-                                if (!isNullOrEmpty(messageId)) {
-                                    response = new EventRequestResponseWrapper<>(messageId, (SharedEvent)response);
-                                }
-                                clientEventService.sendToSession(sessionKey, response);
-                            }
-                        }
-                    })
-                .when(body().isInstanceOf(ReadAssetsEvent.class))
-                    .process(exchange -> {
-                        ReadAssetsEvent readAssets = exchange.getIn().getBody(ReadAssetsEvent.class);
-                        AssetQuery query = readAssets.getAssetQuery();
-
-                        String sessionKey = ProtocolClientEventService.getSessionKey(exchange);
-                        AuthContext authContext = exchange.getIn().getHeader(Constants.AUTH_CONTEXT, AuthContext.class);
-
-                        // Superuser can get all, User must have role
-                        if (!authContext.isSuperUser() && !authContext.hasResourceRole(ClientRole.READ_ASSETS.getValue(), Constants.KEYCLOAK_CLIENT_ID)) {
-                            return;
-                        }
-
-                        Access access = authContext.isSuperUser() || !identityService.getIdentityProvider().isRestrictedUser(authContext.getUserId()) ? PRIVATE : PROTECTED;
-
-                        if (!authContext.isSuperUser()) {
-                            // Force realm to match users
-                            query.tenant(new TenantPredicate(authContext.getAuthenticatedRealm()));
-                        }
-
-                        // Set access requirements
-                        query.access(access);
-
-                        List<Asset<?>> assets = findAll(query);
-
-                        String messageId = exchange.getIn().getHeader(HEADER_REQUEST_RESPONSE_MESSAGE_ID, String.class);
-
-                        if (isNullOrEmpty(messageId)) {
-                            clientEventService.sendToSession(sessionKey, new AssetsEvent(assets));
                         } else {
-                            clientEventService.sendToSession(sessionKey, new EventRequestResponseWrapper<>(messageId, new AssetsEvent(assets)));
+                            response = new AssetEvent(AssetEvent.Cause.READ, asset, null);
                         }
-                    })
-                    .stop()
-            .endChoice()
+                    }
+                }
+
+                if (response != null) {
+                    if (!isNullOrEmpty(messageId)) {
+                        response = new EventRequestResponseWrapper<>(messageId, (SharedEvent)response);
+                    }
+                    clientEventService.sendToSession(sessionKey, response);
+                }
+
+            })
             .end();
+    }
+
+    /**
+     * Authorizes an {@link AssetQuery} by validating it against security constraints and/or applying default options to the query
+     * based on security constraints.
+     */
+    public boolean authorizeAssetQuery(AssetQuery query, AuthContext authContext, String requestRealm) {
+
+        boolean isAnonymous = authContext == null;
+        boolean isSuperUser = authContext != null && authContext.isSuperUser();
+        boolean isRestricted = identityService.getIdentityProvider().isRestrictedUser(authContext);
+
+        // Take realm from query, requestRealm or lastly auth context (super users can query with no realm)
+        String realm = query.realm != null ? query.realm.name : requestRealm != null ? requestRealm : (!isSuperUser && authContext != null ? authContext.getAuthenticatedRealmName() : null);
+
+        if (!isSuperUser) {
+            if (TextUtil.isNullOrEmpty(realm)) {
+                String msg = "Realm must be specified to read assets";
+                LOG.finer(msg);
+                return false;
+            }
+
+            if (isAnonymous) {
+                if (query.access != null && query.access != PUBLIC) {
+                    String msg = "Only public access allowed for anonymous requests";
+                    LOG.finer(msg);
+                    return false;
+                }
+                query.access = PUBLIC;
+            } else if (isRestricted) {
+                if (query.access == PRIVATE) {
+                    String msg = "Only public or restricted access allowed for restricted requests";
+                    LOG.finer(msg);
+                    return false;
+                }
+                if (query.access == null) {
+                    query.access = PROTECTED;
+                }
+            }
+
+            if (query.access != PUBLIC && !authContext.hasResourceRole(ClientRole.READ_ASSETS.getValue(), Constants.KEYCLOAK_CLIENT_ID)) {
+                String msg = "User must have '" + ClientRole.READ_ASSETS.getValue() + "' role to read non public assets";
+                LOG.finer(msg);
+                return false;
+            }
+
+            if (query.access != PUBLIC && !realm.equals(authContext.getAuthenticatedRealmName())) {
+                String msg = "Realm must match authenticated realm for non public access queries";
+                LOG.finer(msg);
+                return false;
+            }
+
+            query.realm = new RealmPredicate(realm);
+
+            if (query.access == PROTECTED) {
+                query.userIds(authContext.getUserId());
+            }
+        }
+
+        if (!identityService.getIdentityProvider().isRealmActiveAndAccessible(authContext, realm)) {
+            String msg = "Realm is not present or is inactive";
+            LOG.finer(msg);
+            return false;
+        }
+
+        return true;
     }
 
     public Asset<?> find(String assetId) {
@@ -473,7 +523,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     public Asset<?> find(String assetId, boolean loadComplete) {
         if (assetId == null)
             throw new IllegalArgumentException("Can't query null asset identifier");
-        return find(new AssetQuery().select(loadComplete ? null : Select.selectExcludeAll()).ids(assetId));
+        return find(new AssetQuery().select(loadComplete ? null : new Select().excludeAttributes()).ids(assetId));
     }
 
     @SuppressWarnings("unchecked")
@@ -502,7 +552,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return find(new AssetQuery()
             .select(loadComplete
                 ? null
-                : Select.selectExcludePathAndAttributes())
+                : new Select().excludeAttributes())
             .ids(assetId)
             .access(access));
     }
@@ -588,12 +638,27 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
      */
     @SuppressWarnings("unchecked")
     public <T extends Asset<?>> T merge(T asset, boolean overrideVersion, boolean skipGatewayCheck, String userName) throws IllegalStateException, ConstraintViolationException {
+
+        LOG.fine("Merging asset: " + asset);
+
         return persistenceService.doReturningTransaction(em -> {
 
-            T existingAsset = TextUtil.isNullOrEmpty(asset.getId()) ? null : (T)em.find(Asset.class, asset.getId());
+            String gatewayId = gatewayService.getLocallyRegisteredGatewayId(asset.getId(), asset.getParentId());
+
+            if (!skipGatewayCheck && gatewayId != null) {
+                LOG.fine("Sending asset merge request to gateway: Gateway ID=" + gatewayId);
+                return gatewayService.mergeGatewayAsset(gatewayId, asset);
+            }
+
+            // Validate realm
+            if (asset.getRealm() == null) {
+                String msg = "Asset realm must be set : asset=" + asset;
+                LOG.fine(msg);
+                throw new IllegalStateException(msg);
+            }
 
             // Do standard JSR-380 validation on the asset (includes custom validation)
-            Set<ConstraintViolation<Asset<?>>> validationFailures = AssetModelUtil.validate(asset, Asset.AssetSave.class);
+            Set<ConstraintViolation<Asset<?>>> validationFailures = ValueUtil.validate(asset, Asset.AssetSave.class);
 
             if (validationFailures.size() > 0) {
                 String msg = "Asset merge failed as asset has failed constraint validation: asset=" + asset;
@@ -602,27 +667,31 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 throw ex;
             }
 
+            T existingAsset = TextUtil.isNullOrEmpty(asset.getId()) ? null : (T)em.find(Asset.class, asset.getId());
+
             if (existingAsset != null) {
 
                 // Verify type has not been changed
                 if (!existingAsset.getType().equals(asset.getType())) {
                     String msg = "Asset type cannot be changed: asset=" + asset;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
 
                 if (!existingAsset.getRealm().equals(asset.getRealm())) {
                     String msg = "Asset realm cannot be changed: asset=" + asset;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
 
-                // Update timestamp on modified attributes
+                // Update timestamp on modified attributes this allows fast equality checking
                 asset.getAttributes().stream().forEach(attr -> {
                     existingAsset.getAttribute(attr.getName()).ifPresent(existingAttr -> {
                         // If attribute is modified make sure the timestamp is also updated to allow simple equality
                         if (!attr.deepEquals(existingAttr) && attr.getTimestamp().orElse(0L) <= existingAttr.getTimestamp().orElse(0L)) {
-                            attr.setTimestamp(timerService.getCurrentTimeMillis());
+                            // In the unlikely situation that we are in the same millisecond as last update
+                            // we will always ensure a delta of >= 1ms
+                            attr.setTimestamp(Math.max(existingAttr.getTimestamp().orElse(0L)+1, timerService.getCurrentTimeMillis()));
                         }
                     });
                 });
@@ -635,29 +704,42 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 }
             }
 
-            // Validate parent
-            if (asset.getParentId() != null) {
-                // If this is a not a root asset...
+            if (!identityService.getIdentityProvider().realmExists(asset.getRealm())) {
+                String msg = "Asset realm not found or is inactive: asset=" + asset;
+                LOG.fine(msg);
+                throw new IllegalStateException(msg);
+            }
+
+            if (asset.getParentId() != null && asset.getParentId().equals(asset.getId())) {
+                String msg = "Asset parent cannot be the asset: asset=" + asset;
+                LOG.fine(msg);
+                throw new IllegalStateException(msg);
+            }
+
+            // Validate parent only if asset is new or parent has changed
+            if ((existingAsset == null && asset.getParentId() != null)
+                || (existingAsset != null && asset.getParentId() != null && !asset.getParentId().equals(existingAsset.getParentId()))) {
+
                 Asset<?> parent = find(em, asset.getParentId(), true);
 
-                // .. the parent must exist
+                // The parent must exist
                 if (parent == null) {
                     String msg = "Asset parent not found: asset=" + asset;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
 
-                // ... the parent can not be a child of the asset
+                // The parent can not be a child of the asset
                 if (parent.pathContains(asset.getId())) {
                     String msg = "Asset parent cannot be a descendant of the asset: asset=" + asset;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
 
-                // .. the parent should be in the same realm
+                // The parent should be in the same realm
                 if (!parent.getRealm().equals(asset.getRealm())) {
                     String msg = "Asset parent must be in the same realm: asset=" + asset;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
 
@@ -666,7 +748,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     String childAssetType = parent.getAttributes().getValue(GroupAsset.CHILD_ASSET_TYPE)
                         .orElseThrow(() -> {
                             String msg = "Asset parent is of type GROUP but the childAssetType attribute is invalid: asset=" + asset;
-                            LOG.info(msg);
+                            LOG.fine(msg);
                             return new IllegalStateException(msg);
                         });
 
@@ -681,23 +763,10 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
                     if (!typeMatch) {
                         String msg = "Asset type does not match parent GROUP asset's childAssetType attribute: asset=" + asset;
-                        LOG.info(msg);
+                        LOG.fine(msg);
                         throw new IllegalStateException(msg);
                     }
                 }
-            }
-
-            // Validate realm
-            if (asset.getRealm() == null) {
-                String msg = "Asset realm must be set : asset=" + asset;
-                LOG.info(msg);
-                throw new IllegalStateException(msg);
-            }
-
-            if (!identityService.getIdentityProvider().tenantExists(asset.getRealm())) {
-                String msg = "Asset realm not found or is inactive: asset=" + asset;
-                LOG.info(msg);
-                throw new IllegalStateException(msg);
             }
 
             // Validate group child asset type attribute
@@ -706,7 +775,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     .map(childAssetTypeString -> TextUtil.isNullOrEmpty(childAssetTypeString) ? null : childAssetTypeString)
                     .orElseThrow(() -> {
                         String msg = "Asset of type GROUP childAssetType attribute must be a valid string: asset=" + asset;
-                        LOG.info(msg);
+                        LOG.fine(msg);
                         return new IllegalStateException(msg);
                     });
 
@@ -714,13 +783,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     .getChildAssetType()
                     .orElseThrow(() -> {
                         String msg = "Asset of type GROUP childAssetType attribute must be a valid string: asset=" + asset;
-                        LOG.info(msg);
+                        LOG.fine(msg);
                         return new IllegalStateException(msg);
                     }) : childAssetType;
 
                 if (!childAssetType.equals(existingChildAssetType)) {
                     String msg = "Asset of type GROUP so childAssetType attribute cannot be changed: asset=" + asset;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
             }
@@ -728,7 +797,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             // Update all empty attribute timestamps with server-time (a caller which doesn't have a
             // reliable time source such as a browser should clear the timestamp when setting an attribute
             // value).
-            // Ensure attribute names are not stored in the value object
             asset.getAttributes().forEach(attribute -> {
                 if (!attribute.hasExplicitTimestamp()) {
                     attribute.setTimestamp(timerService.getCurrentTimeMillis());
@@ -741,28 +809,15 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 user = identityService.getIdentityProvider().getUserByUsername(asset.getRealm(), userName);
                 if (user == null) {
                     String msg = "User not found: " + userName;
-                    LOG.info(msg);
+                    LOG.fine(msg);
                     throw new IllegalStateException(msg);
                 }
             }
 
-            T updatedAsset;
-            String gatewayId = gatewayService.getLocallyRegisteredGatewayId(asset.getId(), asset.getParentId());
-
-            if (!skipGatewayCheck && gatewayId != null) {
-                LOG.fine("Sending asset merge request to gateway: Gateway ID=" + gatewayId);
-                updatedAsset = gatewayService.mergeGatewayAsset(gatewayId, asset);
-            } else {
-                updatedAsset = em.merge(asset);
-                if (existingAsset == null) {
-                    LOG.fine("Asset created: " + updatedAsset);
-                } else {
-                    LOG.fine("Asset updated: " + updatedAsset);
-                }
-            }
+            T updatedAsset = em.merge(asset);
 
             if (user != null) {
-                storeUserAsset(em, new UserAsset(user.getRealm(), user.getId(), updatedAsset.getId()));
+                createUserAssetLinks(em, Collections.singletonList(new UserAssetLink(user.getRealm(), user.getId(), updatedAsset.getId())));
             }
 
             return updatedAsset;
@@ -782,7 +837,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         Map<String, List<String>> gatewayIdAssetIdMap = new HashMap<>();
 
         if (!skipGatewayCheck) {
-            List<String> gatewayIds = ids.stream().filter(id -> gatewayService.isLocallyRegisteredGateway(id)).collect(Collectors.toList());
+            List<String> gatewayIds = ids.stream().filter(id -> gatewayService.isLocallyRegisteredGateway(id)).toList();
 
             if (!gatewayIds.isEmpty()) {
                 // Handle gateway asset deletion in a special way
@@ -859,10 +914,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 }
 
                 assets.sort(Comparator.comparingInt((Asset<?> asset) -> asset.getPath() == null ? 0 : asset.getPath().length).reversed());
-                assets.forEach(asset -> {
-                    em.remove(asset);
-                    LOG.fine("Asset deleted: " + asset);
-                });
+                assets.forEach(em::remove);
                 em.flush();
             });
         } catch (Exception e) {
@@ -883,8 +935,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return persistenceService.doReturningTransaction(entityManager -> {
             try {
                 String queryStr = TextUtil.isNullOrEmpty(userId) ?
-                    "select count(ua) from UserAsset ua where ua.id.assetId = :assetId" :
-                    "select count(ua) from UserAsset ua where ua.id.userId = :userId and ua.id.assetId = :assetId";
+                    "select count(ual) from UserAssetLink ual where ual.id.assetId = :assetId" :
+                    "select count(ual) from UserAssetLink ual where ual.id.userId = :userId and ual.id.assetId = :assetId";
 
                 TypedQuery<Long> query = entityManager.createQuery(
                     queryStr,
@@ -908,7 +960,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return persistenceService.doReturningTransaction(entityManager -> {
             try {
                 return entityManager.createQuery(
-                    "select count(ua) from UserAsset ua where ua.id.userId in :userIds and ua.id.assetId = :assetId",
+                    "select count(ual) from UserAssetLink ual where ual.id.userId in :userIds and ual.id.assetId = :assetId",
                     Long.class)
                     .setParameter("userIds", userIds)
                     .setParameter("assetId", assetId)
@@ -926,7 +978,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return persistenceService.doReturningTransaction(entityManager -> {
             try {
                 return entityManager.createQuery(
-                    "select count(ua) from UserAsset ua where ua.id.userId = :userId and ua.id.assetId in :assetIds",
+                    "select count(ual) from UserAssetLink ual where ual.id.userId = :userId and ual.id.assetId in :assetIds",
                     Long.class)
                     .setParameter("userId", userId)
                     .setParameter("assetIds", assetIds)
@@ -970,11 +1022,11 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     }
 
     public boolean isDescendantAssets(String parentAssetId, List<String> assetIds) {
-        return persistenceService.doReturningTransaction(entityManager -> entityManager.unwrap(Session.class).doReturningWork(new AbstractReturningWork<Boolean>() {
+        return persistenceService.doReturningTransaction(entityManager -> entityManager.unwrap(Session.class).doReturningWork(new AbstractReturningWork<>() {
             @Override
             public Boolean execute(Connection connection) throws SQLException {
-                try (PreparedStatement st = connection.prepareStatement("select count(*) from Asset a where ? = ANY(get_asset_tree_path(a.ID)) AND a.id = ANY(?)")) {
-                    st.setString(1, parentAssetId);
+                try (PreparedStatement st = connection.prepareStatement("select count(*) from Asset a where a.path ~ lquery(?) AND a.id = ANY(?)")) {
+                    st.setString(1, "*." + parentAssetId + ".*");
                     st.setArray(2, st.getConnection().createArrayOf("text", assetIds.toArray()));
                     ResultSet rs = st.executeQuery();
                     return rs.next() && rs.getInt(1) == assetIds.size();
@@ -986,58 +1038,189 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         }));
     }
 
-    public List<UserAsset> findUserAssets(String realm, String userId, String assetId) {
-        return persistenceService.doReturningTransaction(entityManager -> {
-            StringBuilder sb = new StringBuilder();
-            Map<String, Object> parameters = new HashMap<>(3);
-            sb.append("select ua from UserAsset ua where 1=1");
+    public List<UserAssetLink> findUserAssetLinks(String realm, String userId, String assetId) {
+        return findUserAssetLinks(
+            realm,
+            userId != null ? Collections.singletonList(userId) : null,
+            assetId != null ? Collections.singletonList(assetId) : null);
+    }
 
-            if (!isNullOrEmpty(realm)) {
-                sb.append(" and ua.id.realm = :realm");
-                parameters.put("realm", realm);
-            }
-            if (!isNullOrEmpty(userId)) {
-                sb.append(" and ua.id.userId = :userId");
-                parameters.put("userId", userId);
-            }
-            if (!isNullOrEmpty(assetId)) {
-                sb.append(" and ua.id.assetId = :assetId");
-                parameters.put("assetId", assetId);
-            }
+    public List<UserAssetLink> findUserAssetLinks(String realm, List<String> userIds, List<String> assetIds) {
 
-            sb.append(" order by ua.createdOn desc");
+        if (realm == null && (userIds == null || userIds.isEmpty()) && (assetIds == null || assetIds.isEmpty())) {
+            return Collections.emptyList();
+        }
 
-            TypedQuery<UserAsset> query = entityManager.createQuery(sb.toString(), UserAsset.class);
-            parameters.forEach(query::setParameter);
-            return query.getResultList();
-        });
+        return persistenceService.doReturningTransaction(em ->
+            buildFindUserAssetLinksQuery(em, realm, userIds, assetIds).getResultList());
+    }
+
+    protected TypedQuery<UserAssetLink> buildFindUserAssetLinksQuery(EntityManager em, String realm, List<String> userIds, List<String> assetIds) {
+        StringBuilder sb = new StringBuilder();
+        Map<String, Object> parameters = new HashMap<>(3);
+        sb.append("select ua from UserAssetLink ua where 1=1");
+
+        if (!isNullOrEmpty(realm)) {
+            sb.append(" and ua.id.realm in :realm");
+            parameters.put("realm", realm);
+        }
+        if (userIds != null && !userIds.isEmpty()) {
+            sb.append(" and ua.id.userId in :userId");
+            parameters.put("userId", userIds);
+        }
+        if (assetIds != null && !assetIds.isEmpty()) {
+            sb.append(" and ua.id.assetId in :assetId");
+            parameters.put("assetId", assetIds);
+        }
+
+        sb.append(" order by ua.createdOn desc");
+
+        TypedQuery<UserAssetLink> query = em.createQuery(sb.toString(), UserAssetLink.class);
+        parameters.forEach(query::setParameter);
+        return query;
     }
 
     /* ####################################################################################### */
 
     /**
-     * This used to automatically make the user restricted as well but this has been disabled as it no longer fitted
-     * with use cases.
+     * Delete specific {@link UserAssetLink}s.
      */
-    public void storeUserAsset(UserAsset userAsset) {
-        persistenceService.doTransaction(entityManager -> storeUserAsset(entityManager, userAsset));
+    public void deleteUserAssetLinks(List<UserAssetLink> userAssetLinks) {
+
+        if (userAssetLinks == null || userAssetLinks.isEmpty()) {
+            return;
+        }
+
+        Set<String> assetIds = new HashSet<>(userAssetLinks.size());
+        Set<String> userIds = new HashSet<>(userAssetLinks.size());
+
+        userAssetLinks.forEach(userAssetLink -> {
+            userIds.add(userAssetLink.getId().getUserId());
+            assetIds.add(userAssetLink.getId().getAssetId());
+        });
+
+        List<UserAssetLink> existingLinks = new ArrayList<>();
+
+        persistenceService.doTransaction(entityManager -> {
+             existingLinks.addAll(buildFindUserAssetLinksQuery(entityManager, null, userIds.stream().toList(), assetIds.stream().toList())
+                .getResultList().stream().filter(userAssetLinks::contains).toList());
+
+            if (existingLinks.size() != userAssetLinks.size()) {
+                throw new IllegalArgumentException("Cannot delete one or more requested user asset links as they don't exist");
+            }
+
+            StringBuilder sb = new StringBuilder("DELETE FROM user_asset_link WHERE (1=0");
+
+            IntStream.range(0, userAssetLinks.size()).forEach(i -> sb.append(" OR (asset_id=?")
+                .append(3*i)
+                .append(" AND user_id=?")
+                .append((3*i)+1)
+                .append(" AND realm=?")
+                .append((3*i)+2)
+                .append(")"));
+            sb.append(")");
+
+            Query query = entityManager.createNativeQuery(sb.toString());
+
+            IntStream.range(0, userAssetLinks.size()).forEach(i -> {
+                UserAssetLink userAssetLink = userAssetLinks.get(i);
+                query.setParameter((3*i), userAssetLink.getId().getAssetId());
+                query.setParameter((3*i)+1, userAssetLink.getId().getUserId());
+                query.setParameter((3*i)+2, userAssetLink.getId().getRealm());
+            });
+
+            int deleteCount = query.executeUpdate();
+
+            if (deleteCount != userAssetLinks.size()) {
+                throw new IllegalArgumentException("Cannot delete one or more requested user asset links as they don't exist");
+            }
+        });
+
+        existingLinks.forEach(userAssetLink ->
+            persistenceService.publishPersistenceEvent(
+                PersistenceEvent.Cause.DELETE,
+                null,
+                userAssetLink,
+                UserAssetLink.class,
+                null,
+                null));
     }
 
     /**
-     * This used to automatically unrestrict a user  if no assets are linked to the them anymore but this has been
-     * disabled as it no longer fitted with use cases.
+     * Delete all {@link UserAssetLink}s for the specified {@link User}
      */
-    public void deleteUserAsset(String realm, String userId, String assetId) {
+    public void deleteUserAssetLinks(String userId) {
         persistenceService.doTransaction(entityManager -> {
-            UserAsset userAsset = entityManager.find(UserAsset.class, new UserAsset.Id(realm, userId, assetId));
-            if (userAsset != null)
-                entityManager.remove(userAsset);
+            Query query = entityManager.createQuery("DELETE FROM UserAssetLink ual WHERE ual.id.userId = ?0");
+            query.setParameter(0, userId);
+            int deleteCount = query.executeUpdate();
+            LOG.fine("Deleted all user asset links for user: user ID=" + userId + ", count=" + deleteCount);
         });
     }
 
-    protected void storeUserAsset(EntityManager entityManager, UserAsset userAsset) {
-        userAsset.setCreatedOn(new Date(timerService.getCurrentTimeMillis()));
-        entityManager.merge(userAsset);
+    /**
+     * Create specified {@link UserAssetLink}s.
+     */
+    public void storeUserAssetLinks(List<UserAssetLink> userAssetLinks) {
+
+        if (userAssetLinks == null || userAssetLinks.isEmpty()) {
+            return;
+        }
+
+        Set<String> assetIds = new HashSet<>(userAssetLinks.size());
+        Set<String> userIds = new HashSet<>(userAssetLinks.size());
+
+        userAssetLinks.forEach(userAssetLink -> {
+            userIds.add(userAssetLink.getId().getUserId());
+            assetIds.add(userAssetLink.getId().getAssetId());
+        });
+
+        persistenceService.doTransaction(em -> {
+            List<UserAssetLink> existingLinks = buildFindUserAssetLinksQuery(em, null, userIds.stream().toList(), assetIds.stream().toList())
+                .getResultList();
+
+            List<UserAssetLink> newLinks = userAssetLinks.stream()
+                .filter(userAssetLink -> !existingLinks.contains(userAssetLink))
+                .toList();
+
+            createUserAssetLinks(em, newLinks);
+        });
+    }
+
+    protected void createUserAssetLinks(EntityManager em, List<UserAssetLink> userAssets) {
+
+        em.unwrap(Session.class).doWork(connection -> {
+
+            LOG.finest("Storing user assets: count=" + userAssets.size());
+            PreparedStatement st;
+
+            try {
+                st = connection.prepareStatement("INSERT INTO USER_ASSET_LINK (asset_id, realm, user_id, created_on) VALUES (?, ?, ?, ?) ON CONFLICT (asset_id, realm, user_id) DO NOTHING");
+                for (UserAssetLink userAssetLink : userAssets) {
+                    st.setString(1, userAssetLink.getId().getAssetId());
+                    st.setString(2, userAssetLink.getId().getRealm());
+                    st.setObject(3, userAssetLink.getId().getUserId());
+                    st.setTimestamp(4, new Timestamp(timerService.getCurrentTimeMillis()));
+                    st.addBatch();
+                }
+                st.executeBatch();
+
+                // Create a persistence event for each one
+                userAssets.forEach(userAssetLink ->
+                    persistenceService.publishPersistenceEvent(
+                        PersistenceEvent.Cause.CREATE,
+                        userAssetLink,
+                        null,
+                        UserAssetLink.class,
+                        null,
+                        null)
+                );
+            } catch (Exception e) {
+                String msg = "Failed to create user assets: count=" + userAssets.size();
+                LOG.log(Level.WARNING, msg, e);
+                throw new IllegalStateException(msg, e);
+            }
+        });
     }
 
     protected Asset<?> find(EntityManager em, String assetId, boolean loadComplete, Access access) {
@@ -1048,7 +1231,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             new AssetQuery()
                 .select(loadComplete
                     ? null
-                    : Select.selectExcludePathAndAttributes())
+                    : new Select().excludeAttributes())
                 .ids(assetId)
                 .access(access)
         );
@@ -1060,6 +1243,26 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         if (query.access == null)
             query.access = PRIVATE;
 
+        // Do some sanity checks on query values and return empty result set if empty query parameters
+        if (query.ids != null && query.ids.length == 0) {
+            return Collections.emptyList();
+        }
+        if (query.paths != null && query.paths.length == 0) {
+            return Collections.emptyList();
+        }
+        if (query.types != null && query.types.length == 0) {
+            return Collections.emptyList();
+        }
+        if (query.names != null && query.names.length == 0) {
+            return Collections.emptyList();
+        }
+        if (query.userIds != null && query.userIds.length == 0) {
+            return Collections.emptyList();
+        }
+        if (query.parents != null && query.parents.length == 0) {
+            return Collections.emptyList();
+        }
+
         // Default to order by creation date if the query may return multiple results
         if (query.orderBy == null && query.ids == null)
             query.orderBy = new OrderBy(OrderBy.Property.CREATED_ON);
@@ -1068,42 +1271,49 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         PreparedAssetQuery querySql = queryAndContainsCalendarPredicate.key;
         boolean containsCalendarPredicate = queryAndContainsCalendarPredicate.value;
 
-        if (containsCalendarPredicate && (query.select != null && (query.select.excludeAttributes))) {
-            LOG.info("Asset query contains a calendar event predicate which requires the attribute values and types to be included in the select (as calendar event predicate is applied post DB query)");
+        if (containsCalendarPredicate && (query.select != null && (query.select.attributes == null))) {
+            LOG.fine("Asset query contains a calendar event predicate which requires the attribute values and types to be included in the select (as calendar event predicate is applied post DB query)");
             throw new IllegalArgumentException("Asset query contains a calendar event predicate which requires the attribute values and types to be included in the select (as calendar event predicate is applied post DB query)");
         }
 
-        // Use a SqlResultSetMapping to allow auto hydration with retrieval of transient data as well
-        // Using hibernate query object rather than JPA as postgres array parameter support doesn't work in JPQL without specifying the data type
-        org.hibernate.query.Query<Object[]> jpql = em.createNativeQuery(querySql.querySql, "AssetMapping").unwrap(org.hibernate.query.Query.class);
+        // RT: No longer used as parent info removed for simplicity and security reasons
+//        // Use a SqlResultSetMapping to allow auto hydration with retrieval of transient data as well
+//        // Using hibernate query object rather than JPA as postgres array parameter support doesn't work in JPQL without specifying the data type
+//        org.hibernate.query.Query<Object[]> jpql = em.createNativeQuery(querySql.querySql, "AssetMapping").unwrap(org.hibernate.query.Query.class);
+//        querySql.apply(em, jpql);
+//        List<Object[]> results = jpql.getResultList();
+//        Stream<Asset<?>> assetStream = results.stream().map(objArr -> {
+//            Asset<?> asset = (Asset<?>)objArr[0];
+//
+//            if (objArr.length == 3) {
+//                // We have transient parent info
+//                String parentName = (String)objArr[1];
+//                String parentType = (String)objArr[2];
+//                try {
+//                    assetParentNameField.set(asset, parentName);
+//                    assetParentTypeField.set(asset, parentType);
+//                } catch (IllegalAccessException e) {
+//                    LOG.log(Level.WARNING, "Failed to set asset parent name and/or type fields", e);
+//                }
+//            }
+//            return asset;
+//        });
+
+        org.hibernate.query.Query<Object[]> jpql = em.createNativeQuery(querySql.querySql, Asset.class).unwrap(org.hibernate.query.Query.class);
         querySql.apply(em, jpql);
-
-        List<Object[]> results = jpql.getResultList();
-
-        Stream<Asset<?>> assetStream = results.stream().map(objArr -> {
-            Asset<?> asset = (Asset<?>)objArr[0];
-
-            if (objArr.length == 3) {
-                // We have transient parent info
-                String parentName = (String)objArr[1];
-                String parentType = (String)objArr[2];
-                try {
-                    assetParentNameField.set(asset, parentName);
-                    assetParentTypeField.set(asset, parentType);
-                } catch (IllegalAccessException e) {
-                    LOG.log(Level.WARNING, "Failed to set asset parent name and/or type fields", e);
-                }
-            }
-            return asset;
-        });
+        List<Asset<?>> assets = (List<Asset<?>>)(Object)jpql.getResultList();
 
         if (containsCalendarPredicate) {
-            assetStream = assetStream.filter(asset -> calendarEventPredicateMatches(timerService::getCurrentTimeMillis, query, asset));
+            return assets.stream().filter(asset -> calendarEventPredicateMatches(timerService::getCurrentTimeMillis, query, asset)).toList();
         }
 
-        return assetStream.collect(Collectors.toList());
+        return assets;
     }
 
+    /**
+     * This does a low level JDBC update so hibernate event interceptor doesn't get called and we 'manually'
+     * generate the {@link AttributeEvent}
+     */
     protected boolean updateAttributeValue(EntityManager em, Asset<?> asset, Attribute<?> attribute) {
 
         try {
@@ -1114,7 +1324,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             Object value = attribute.getValue();
             long timestamp = attribute.getTimestamp().orElseGet(timerService::getCurrentTimeMillis);
 
-            return em.unwrap(Session.class).doReturningWork(connection -> {
+            boolean success = em.unwrap(Session.class).doReturningWork(connection -> {
                 String jpql = "update Asset" +
                     " set attributes = jsonb_set(jsonb_set(attributes, ?, ?, true), ?, ?, true)" +
                     " where id = ? and attributes -> ? is not null";
@@ -1129,7 +1339,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     PGobject pgJsonValue = new PGobject();
                     pgJsonValue.setType("jsonb");
                     // Careful, do not set Java null here! It will erase your whole SQL column!
-                    pgJsonValue.setValue(Values.asJSON(value).orElse(Values.NULL_LITERAL));
+                    pgJsonValue.setValue(ValueUtil.asJSON(value).orElse(ValueUtil.NULL_LITERAL));
                     statement.setObject(2, pgJsonValue);
 
                     // Bind the value timestamp
@@ -1152,15 +1362,38 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                         LOG.finest("Stored asset '" + asset.getId()
                             + "' attribute '" + attributeName
                             + "' (affected rows: " + updatedRows + ") value: "
-                            + (value != null ? Values.asJSON(value).orElse("null") : "null"));
+                            + (value != null ? ValueUtil.asJSON(value).orElse("null") : "null"));
                     }
                     return updatedRows == 1;
                 }
             });
+
+            if (success) {
+                publishAttributeEvent(asset, attribute);
+            }
+
+            return success;
+
         } catch (Exception e) {
             LOG.log(Level.WARNING, "Failed to store attribute value", e);
             return false;
         }
+    }
+
+    protected void publishAttributeEvent(Asset<?> asset, Attribute<?> attribute) {
+        clientEventService.publishEvent(
+            new AttributeEvent(
+                asset.getId(),
+                attribute.getName(),
+                attribute.getValue().orElse(null),
+                attribute.getTimestamp().orElse(timerService.getCurrentTimeMillis())
+            )
+                .setParentId(asset.getParentId())
+                .setRealm(asset.getRealm())
+                .setPath(asset.getPath())
+                .setAccessRestrictedRead(attribute.getMetaValue(MetaItemType.ACCESS_RESTRICTED_READ).orElse(false))
+                .setAccessPublicRead(attribute.getMetaValue(MetaItemType.ACCESS_PUBLIC_READ).orElse(false))
+        );
     }
 
     protected void publishModificationEvents(PersistenceEvent<Asset<?>> persistenceEvent) {
@@ -1172,6 +1405,12 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
                 if (loadedAsset == null) {
                     return;
+                }
+
+                if (LOG.isLoggable(Level.FINER)) {
+                    LOG.finer("Asset created: " + loadedAsset.toStringAll());
+                } else {
+                    LOG.fine("Asset created: " + loadedAsset);
                 }
 
                 clientEventService.publishEvent(
@@ -1190,49 +1429,59 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 break;
             case UPDATE:
 
-                // Use simple equality check on each property
-                String[] updatedProperties = Arrays.stream(persistenceEvent.getPropertyNames()).filter(propertyName -> {
-                    Object oldValue = persistenceEvent.getPreviousState(propertyName);
-                    Object newValue = persistenceEvent.getCurrentState(propertyName);
-                    return !Objects.equals(oldValue, newValue);
-                }).toArray(String[]::new);
+                String[] updatedProperties = persistenceEvent.getPropertyNames();
+                boolean attributesChanged = Arrays.asList(updatedProperties).contains("attributes");
+
+//                String[] updatedProperties = Arrays.stream(persistenceEvent.getPropertyNames()).filter(propertyName -> {
+//                    Object oldValue = persistenceEvent.getPreviousState(propertyName);
+//                    Object newValue = persistenceEvent.getCurrentState(propertyName);
+//                    return !Objects.deepEquals(oldValue, newValue);
+//                }).toArray(String[]::new);
 
                 // Fully load the asset
                 loadedAsset = find(new AssetQuery().ids(asset.getId()));
+
+                if (loadedAsset == null) {
+                    return;
+                }
+
+                LOG.finer("Asset updated: " + persistenceEvent);
 
                 clientEventService.publishEvent(
                     new AssetEvent(AssetEvent.Cause.UPDATE, loadedAsset, updatedProperties)
                 );
 
                 // Did any attributes change if so raise attribute events on the event bus
-                AttributeMap oldAttributes = persistenceEvent.getPreviousState("attributes");
-                AttributeMap newAttributes = persistenceEvent.getCurrentState("attributes");
+                if (attributesChanged) {
+                    AttributeMap oldAttributes = persistenceEvent.getPreviousState("attributes");
+                    AttributeMap newAttributes = persistenceEvent.getCurrentState("attributes");
 
-                // Get removed attributes and raise an attribute event with deleted flag in attribute state
-                oldAttributes.stream()
-                    .filter(oldAttribute ->
-                        newAttributes.stream().noneMatch(newAttribute ->
-                            oldAttribute.getName().equals(newAttribute.getName())
-                    ))
-                    .forEach(obsoleteAttribute ->
-                        clientEventService.publishEvent(
-                            AttributeEvent.deletedAttribute(asset.getId(), obsoleteAttribute.getName())
-                    ));
+                    // Get removed attributes and raise an attribute event with deleted flag in attribute state
+                    oldAttributes.stream()
+                        .filter(oldAttribute ->
+                            newAttributes.stream().noneMatch(newAttribute ->
+                                oldAttribute.getName().equals(newAttribute.getName())
+                            ))
+                        .forEach(obsoleteAttribute ->
+                            clientEventService.publishEvent(
+                                AttributeEvent.deletedAttribute(asset.getId(), obsoleteAttribute.getName())
+                            ));
 
-                // Get new or modified attributes
-                getAddedOrModifiedAttributes(oldAttributes.values(),
-                    newAttributes.values())
-                    .forEach(newOrModifiedAttribute ->
-                        clientEventService.publishEvent(
-                            new AttributeEvent(
-                                asset.getId(),
-                                newOrModifiedAttribute.getName(),
-                                newOrModifiedAttribute.getValue().orElse(null),
-                                newOrModifiedAttribute.getTimestamp().orElse(0L))
-                                .setParentId(asset.getParentId()).setRealm(asset.getRealm())
-                        ));
+                    // Get new or modified attributes
+                    getAddedOrModifiedAttributes(oldAttributes.values(),
+                        newAttributes.values())
+                        .forEach(newOrModifiedAttribute ->
+                            publishAttributeEvent(asset, newOrModifiedAttribute)
+                        );
+                }
                 break;
             case DELETE:
+
+                if (LOG.isLoggable(Level.FINER)) {
+                    LOG.finer("Asset deleted: " + asset.toStringAll());
+                } else {
+                    LOG.fine("Asset deleted: " + asset);
+                }
 
                 clientEventService.publishEvent(
                     new AssetEvent(AssetEvent.Cause.DELETE, asset, null)
@@ -1246,18 +1495,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     ));
                 break;
         }
-    }
-
-    protected void replyWithAttributeEvents(String sessionKey, String subscriptionId, Asset<?> asset, String[] attributeNames) {
-        List<String> names = attributeNames == null ? Collections.emptyList() : Arrays.asList(attributeNames);
-
-        // Client may want to read a subset or all attributes of the asset
-        List<AttributeEvent> events = asset.getAttributes().stream()
-            .filter(attribute -> names.isEmpty() || names.contains(attribute.getName()))
-            .map(attribute -> new AttributeEvent(new AttributeState(asset.getId(), attribute)))
-            .collect(Collectors.toList());
-        TriggeredEventSubscription<?> triggeredEventSubscription = new TriggeredEventSubscription<>(events, subscriptionId);
-        clientEventService.sendToSession(sessionKey, triggeredEventSubscription);
     }
 
     public String toString() {
@@ -1306,25 +1543,13 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         sb.append(", A.CREATED_ON AS CREATED_ON, A.TYPE AS TYPE, A.PARENT_ID AS PARENT_ID");
         sb.append(", A.REALM AS REALM, A.VERSION as VERSION");
 
-        if (level == 3) {
-            sb.append(", A.PARENT_NAME as PARENT_NAME, A.PARENT_TYPE as PARENT_TYPE");
-        } else {
-            if (select == null || !select.excludeParentInfo) {
-                sb.append(", P.NAME as PARENT_NAME, P.TYPE as PARENT_TYPE");
-            } else {
-                sb.append(", NULL as PARENT_NAME, NULL as PARENT_TYPE");
-            }
-        }
-
         if (!query.recursive || level == 3) {
-            if (select == null || !select.excludePath) {
-                sb.append(", get_asset_tree_path(A.ID) as PATH");
-            } else {
-                sb.append(", NULL as PATH");
-            }
+            sb.append(", A.PATH as PATH");
+        } else {
+            sb.append(", NULL as PATH");
         }
 
-        if (select == null || !select.excludeAttributes) {
+        if (select == null || select.attributes == null || select.attributes.length > 0) {
             if (query.recursive && level != 3) {
                 sb.append(", A.ATTRIBUTES as ATTRIBUTES");
             } else {
@@ -1379,10 +1604,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
         if (level == 1) {
             sb.append(" from Asset A ");
-
-            if (requiresParentJoin(query)) {
-                sb.append("left outer join Asset P on A.PARENT_ID = P.id ");
-            }
         } else if (level == 2) {
             sb.append(" from top_level_assets P ");
             sb.append("join Asset A on A.PARENT_ID = P.ID ");
@@ -1390,8 +1611,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             sb.append(" from top_level_assets A ");
         }
 
-        if ((!recursive || level == 3) && query.userIds != null && query.userIds.length > 0) {
-            sb.append("right join USER_ASSET UA on A.ID = UA.ASSET_ID ");
+        if ((!recursive || level == 3) && query.userIds != null) {
+            sb.append("right join USER_ASSET_LINK UA on A.ID = UA.ASSET_ID ");
         }
 
         return sb.toString();
@@ -1450,7 +1671,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             return false;
         }
 
-        if (level == 1 && query.ids != null && query.ids.length > 0) {
+        if (level == 1 && query.ids != null) {
             final int pos = binders.size() + 1;
             sb.append(" and A.ID = ANY(?")
                 .append(pos)
@@ -1458,7 +1679,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             binders.add((em, st) -> st.setParameter(pos, query.ids, StringArrayType.INSTANCE));
         }
 
-        if (level == 1 && query.names != null && query.names.length > 0) {
+        if (level == 1 && query.names != null) {
 
             sb.append(" and (");
             boolean isFirst = true;
@@ -1476,7 +1697,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             sb.append(")");
         }
 
-        if (query.parents != null && query.parents.length > 0) {
+        if (query.parents != null) {
 
             sb.append(" and (");
             boolean isFirst = true;
@@ -1493,25 +1714,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     final int pos = binders.size() + 1;
                     sb.append("A.PARENT_ID = ?").append(pos);
                     binders.add((em, st) -> st.setParameter(pos, pred.id));
-                } else if (level == 1 && pred.noParent) {
+                } else if (level == 1) {
                     sb.append("A.PARENT_ID is null");
-                } else if (pred.type != null || pred.name != null) {
-                    if (pred.type != null) {
-                        String[] resolvedTypes = getResolvedAssetTypes(new Class[]{pred.type});
-                        final int pos = binders.size() + 1;
-                        sb.append("P.TYPE = ANY(?")
-                            .append(pos)
-                            .append(")");
-                        binders.add((em, st) -> st.setParameter(pos, resolvedTypes, StringArrayType.INSTANCE));
-                    }
-                    if (pred.name != null) {
-                        if (pred.type != null) {
-                            sb.append(" and ");
-                        }
-                        final int pos = binders.size() + 1;
-                        sb.append("P.NAME = ?").append(pos);
-                        binders.add((em, st) -> st.setParameter(pos, pred.name));
-                    }
                 } else {
                     sb.append("true");
                 }
@@ -1522,32 +1726,27 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
             sb.append(")");
         }
 
-        if (level == 1 && hasPathConstraint(query.paths)) {
+        if (level == 1 && query.paths != null) {
             sb.append(" and (");
-            boolean isFirst = true;
+            Arrays.stream(query.paths)
+                .map(p -> String.join(".", p.path))
+                .forEach(lqueryStr -> {
+                    int pos = binders.size() + 1;
+                    sb.append("A.PATH ~ lquery(?").append(pos).append(") or ");
+                    binders.add((em, st) -> st.setParameter(pos, "*." + lqueryStr + ".*"));
+                });
 
-            for (PathPredicate pred : query.paths) {
-                if (!isFirst) {
-                    sb.append(" or ");
-                }
-                isFirst = false;
-
-                final int pos = binders.size() + 1;
-                sb.append("?").append(pos).append(" <@ get_asset_tree_path(A.id)");
-                binders.add((em, st) -> st.setParameter(pos, pred.path, StringArrayType.INSTANCE));
-            }
-
-            sb.append(")");
+            sb.append("false)");
         }
 
         if (!recursive || level == 3) {
-            if (query.tenant != null && !TextUtil.isNullOrEmpty(query.tenant.realm)) {
+            if (query.realm != null && !TextUtil.isNullOrEmpty(query.realm.name)) {
                 final int pos = binders.size() + 1;
                 sb.append(" and A.REALM = ?").append(pos);
-                binders.add((em, st) -> st.setParameter(pos, query.tenant.realm));
+                binders.add((em, st) -> st.setParameter(pos, query.realm.name));
             }
 
-            if (query.userIds != null && query.userIds.length > 0) {
+            if (query.userIds != null) {
                 final int pos = binders.size() + 1;
                 sb.append(" and UA.USER_ID = ANY(?")
                     .append(pos)
@@ -1559,7 +1758,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 sb.append(" and A.ACCESS_PUBLIC_READ is true");
             }
 
-            if (query.types != null && query.types.length > 0) {
+            if (query.types != null) {
                 String[] resolvedTypes = getResolvedAssetTypes(query.types);
                 final int pos = binders.size() + 1;
                 sb.append(" and A.TYPE = ANY(?")
@@ -1586,7 +1785,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
     protected static String[] getResolvedAssetTypes(Class<? extends Asset<?>>[] assetClasses) {
         return Arrays.stream(assetClasses)
             .flatMap(assetClass ->
-                Arrays.stream(AssetModelUtil.getAssetClasses(null)).filter(assetClass::isAssignableFrom))
+                Arrays.stream(ValueUtil.getAssetClasses(null)).filter(assetClass::isAssignableFrom))
             .map(Class::getSimpleName)
             .distinct()
             .toArray(String[]::new);
@@ -1623,7 +1822,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                 }
                 isFirst = false;
 
-                selectInserter.accept(groupIndex > 0 ? ", jsonb_each(A.attributes) as AX" + groupIndex : "jsonb_each(A.attributes) as AX" + groupIndex);
+                selectInserter.accept((groupIndex > 0 ? ", " : "") + "jsonb_each(A.attributes) as AX" + groupIndex);
                 containsCalendarPredicate = !containsCalendarPredicate && addNameValuePredicates(group, sb, binders, "AX" + groupIndex, selectInserter, operator == LogicGroup.Operator.OR, timeProvider);
                 groupIndex++;
             }
@@ -1666,7 +1865,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
                 if (attributePredicate.meta != null && attributePredicate.meta.length > 0) {
                     String metaJsonObjName = jsonObjName + "_AM" + metaIndex++;
-                    selectInserter.accept(", jsonb_each(" + jsonObjName + ".VALUE #> '{meta}') as " + metaJsonObjName);
+                    selectInserter.accept(" LEFT JOIN jsonb_each(" + jsonObjName + ".VALUE #> '{meta}') as " + metaJsonObjName + " ON true");
                     sb.append(" and (");
                     addNameValuePredicates(Arrays.asList(attributePredicate.meta.clone()), sb, binders, metaJsonObjName, selectInserter, true, timeProvider);
                     sb.append(")");
@@ -1678,29 +1877,6 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         return containsCalendarPredicate;
     }
 
-    protected static boolean hasPathConstraint(PathPredicate[] pathPredicates) {
-        if (pathPredicates == null || pathPredicates.length == 0) {
-            return false;
-        }
-
-        return Arrays.stream(pathPredicates).anyMatch(p -> p.path != null);
-    }
-
-    protected static boolean requiresParentJoin(AssetQuery query) {
-        ParentPredicate[] parentPredicates = query.parents;
-
-        if (query.select == null || !query.select.excludeParentInfo) {
-            return true;
-        }
-
-        if (parentPredicates == null || parentPredicates.length == 0) {
-            return false;
-        }
-
-        return Arrays.stream(parentPredicates)
-            .anyMatch(p -> !p.noParent && (p.type != null || p.name != null));
-    }
-
     protected static String buildNameValuePredicateFilter(NameValuePredicate nameValuePredicate, String jsonObjName, List<ParameterBinder> binders, Supplier<Long> timeProvider) {
         if (nameValuePredicate.name == null && nameValuePredicate.value == null) {
             return "TRUE";
@@ -1708,7 +1884,8 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
         StringBuilder attributeBuilder = new StringBuilder();
 
-        if (nameValuePredicate.negated) {
+        // Only append not on the outer filter if value predicate is not set otherwise it will match any attribute with different name and value
+        if (nameValuePredicate.negated && (nameValuePredicate.value == null || nameValuePredicate.name == null)) {
             attributeBuilder.append("NOT (");
         }
 
@@ -1729,6 +1906,10 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
             if (nameValuePredicate.name != null) {
                 attributeBuilder.append(" and ");
+
+                if (nameValuePredicate.negated) {
+                    attributeBuilder.append(" NOT(");
+                }
             }
 
             // Inserts the SQL string and adds the parameters
@@ -1817,7 +1998,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                     }
                     final int pos = binders.size() + 1;
                     attributeBuilder.append(" @> ?").append(pos).append(" \\:\\:jsonb");
-                    binders.add((em, st) -> st.setParameter(pos, Values.asJSON(arrayPredicate.value).orElse(Values.NULL_LITERAL)));
+                    binders.add((em, st) -> st.setParameter(pos, ValueUtil.asJSON(arrayPredicate.value).orElse(ValueUtil.NULL_LITERAL)));
                 } else {
                     attributeBuilder.append("true");
                 }
@@ -1887,12 +2068,9 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
                         .append(location.latMax)
                         .append("))");
                 }
-            } else if (nameValuePredicate.value instanceof ValueNotEmptyPredicate) {
-                valuePathInserter.accept(attributeBuilder, binders);
-                attributeBuilder.append("\\:\\:text IS NOT NULL");
             } else if (nameValuePredicate.value instanceof ValueEmptyPredicate) {
                 valuePathInserter.accept(attributeBuilder, binders);
-                attributeBuilder.append("\\:\\:text IS NULL");
+                attributeBuilder.append(((ValueEmptyPredicate) nameValuePredicate.value).negate ? "\\:\\:text IS NOT NULL" : "\\:\\:text IS NULL");
             } else if (nameValuePredicate.value instanceof CalendarEventPredicate) {
                 final int pos = binders.size() + 1;
                 java.sql.Timestamp when = new java.sql.Timestamp(((CalendarEventPredicate)nameValuePredicate.value).timestamp.getTime());
@@ -1924,6 +2102,11 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
 
         if (nameValuePredicate.negated) {
             attributeBuilder.append(")");
+
+            if (nameValuePredicate.value == null) {
+                // We have to include `is null` in where clause also as technically name not equals X is satisfied by null - mostly useful for meta items
+                attributeBuilder.append(" or ").append(jsonObjName).append(".key IS NULL");
+            }
         }
 
         return attributeBuilder.toString();
@@ -1966,7 +2149,7 @@ public class AssetStorageService extends RouteBuilder implements ContainerServic
         throw new IllegalArgumentException("Unsupported operator: " + operator);
     }
 
-    protected static String buildMatchFilter(StringPredicate predicate, int pos) {
+    public static String buildMatchFilter(StringPredicate predicate, int pos) {
         switch (predicate.match) {
             case BEGIN:
             case END:
