@@ -21,7 +21,6 @@ package org.openremote.manager.energy;
 
 import org.apache.camel.builder.RouteBuilder;
 import org.openremote.container.message.MessageBrokerService;
-import org.openremote.container.persistence.PersistenceEvent;
 import org.openremote.container.timer.TimerService;
 import org.openremote.manager.asset.AssetProcessingService;
 import org.openremote.manager.asset.AssetStorageService;
@@ -30,20 +29,23 @@ import org.openremote.manager.event.ClientEventService;
 import org.openremote.manager.gateway.GatewayService;
 import org.openremote.model.Container;
 import org.openremote.model.ContainerService;
+import org.openremote.model.PersistenceEvent;
 import org.openremote.model.asset.Asset;
 import org.openremote.model.asset.AssetDescriptor;
 import org.openremote.model.asset.impl.*;
 import org.openremote.model.attribute.Attribute;
 import org.openremote.model.attribute.AttributeEvent;
+import org.openremote.model.attribute.AttributeExecuteStatus;
 import org.openremote.model.attribute.AttributeRef;
+import org.openremote.model.datapoint.DatapointInterval;
 import org.openremote.model.datapoint.ValueDatapoint;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.query.LogicGroup;
 import org.openremote.model.query.filter.AttributePredicate;
 import org.openremote.model.query.filter.BooleanPredicate;
 import org.openremote.model.query.filter.StringPredicate;
-import org.openremote.model.util.AssetModelUtil;
 import org.openremote.model.util.Pair;
+import org.openremote.model.util.ValueUtil;
 import org.openremote.model.value.MetaItemType;
 
 import java.time.*;
@@ -53,6 +55,7 @@ import java.util.*;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiFunction;
 import java.util.function.Function;
@@ -62,8 +65,8 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.time.temporal.ChronoUnit.HOURS;
-import static org.openremote.container.persistence.PersistenceEvent.PERSISTENCE_TOPIC;
-import static org.openremote.container.persistence.PersistenceEvent.isPersistenceEventForEntityType;
+import static org.openremote.container.persistence.PersistenceService.PERSISTENCE_TOPIC;
+import static org.openremote.container.persistence.PersistenceService.isPersistenceEventForEntityType;
 import static org.openremote.manager.gateway.GatewayService.isNotForGateway;
 
 /**
@@ -71,7 +74,26 @@ import static org.openremote.manager.gateway.GatewayService.isNotForGateway;
  */
 public class EnergyOptimisationService extends RouteBuilder implements ContainerService {
 
+    protected static class OptimisationInstance {
+        EnergyOptimisationAsset optimisationAsset;
+        EnergyOptimiser energyOptimiser;
+        ScheduledFuture<?> optimiserFuture;
+
+        /**
+         * This keeps track of a theoretical energy level of storage assets. This is used to calculate
+         * the theoretical un-optimised costs.
+         */
+        Map<String, Double> unoptimisedStorageAssetEnergyLevels = new HashMap<>();
+
+        public OptimisationInstance(EnergyOptimisationAsset optimisationAsset, EnergyOptimiser energyOptimiser, ScheduledFuture<?> optimiserFuture) {
+            this.optimisationAsset = optimisationAsset;
+            this.energyOptimiser = energyOptimiser;
+            this.optimiserFuture = optimiserFuture;
+        }
+    }
+
     protected static final Logger LOG = Logger.getLogger(EnergyOptimisationService.class.getName());
+    protected static final int OPTIMISATION_TIMEOUT_MILLIS = 60000*10; // 10 mins
     protected DateTimeFormatter formatter = DateTimeFormatter.ISO_LOCAL_DATE_TIME.withZone(ZoneId.from(ZoneOffset.UTC));
     protected TimerService timerService;
     protected AssetProcessingService assetProcessingService;
@@ -81,12 +103,8 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
     protected ClientEventService clientEventService;
     protected GatewayService gatewayService;
     protected ScheduledExecutorService executorService;
-    protected Map<String, Pair<EnergyOptimiser, ScheduledFuture<?>>> assetEnergyOptimiserMap = new HashMap<>();
-
-    @Override
-    public int getPriority() {
-        return DEFAULT_PRIORITY;
-    }
+    protected final Map<String, OptimisationInstance> assetOptimisationInstanceMap = new HashMap<>();
+    protected List<String> forceChargeAssetIds = new ArrayList<>();
 
     @Override
     public void init(Container container) throws Exception {
@@ -98,12 +116,6 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
         clientEventService = container.getService(ClientEventService.class);
         gatewayService = container.getService(GatewayService.class);
         executorService = container.getExecutorService();
-
-        clientEventService.addInternalSubscription(
-            AttributeEvent.class,
-            null,
-            this::onAssetAttributeEvent
-        );
     }
 
     @Override
@@ -115,7 +127,6 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
 
         List<EnergyOptimisationAsset> energyOptimisationAssets = assetStorageService.findAll(
             new AssetQuery()
-                .select(new AssetQuery.Select().excludeParentInfo(true))
                 .types(EnergyOptimisationAsset.class)
         )
             .stream()
@@ -126,6 +137,11 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
         LOG.fine("Found enabled optimisation asset count = " + energyOptimisationAssets.size());
 
         energyOptimisationAssets.forEach(this::startOptimisation);
+
+        clientEventService.addInternalSubscription(
+            AttributeEvent.class,
+            null,
+            this::processAttributeEvent);
     }
 
     @SuppressWarnings("unchecked")
@@ -140,43 +156,167 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
 
     @Override
     public void stop(Container container) throws Exception {
-        new ArrayList<>(assetEnergyOptimiserMap.keySet())
+        new ArrayList<>(assetOptimisationInstanceMap.keySet())
             .forEach(this::stopOptimisation);
     }
 
     protected void processAssetChange(PersistenceEvent<EnergyOptimisationAsset> persistenceEvent) {
+        LOG.fine("Processing optimisation asset change: " + persistenceEvent);
+        stopOptimisation(persistenceEvent.getEntity().getId());
 
+        if (persistenceEvent.getCause() != PersistenceEvent.Cause.DELETE) {
+            if (!persistenceEvent.getEntity().isOptimisationDisabled().orElse(false)) {
+                startOptimisation(persistenceEvent.getEntity());
+            }
+        }
     }
 
-    protected void onAssetAttributeEvent(AttributeEvent attributeEvent) {
+    protected void processAttributeEvent(AttributeEvent attributeEvent) {
+        OptimisationInstance optimisationInstance = assetOptimisationInstanceMap.get(attributeEvent.getAssetId());
 
+        if (optimisationInstance != null) {
+            processOptimisationAssetAttributeEvent(optimisationInstance, attributeEvent);
+            return;
+        }
+
+        String attributeName = attributeEvent.getAttributeName();
+
+        if ((attributeName.equals(ElectricityChargerAsset.VEHICLE_CONNECTED.getName()) || attributeName.equals(ElectricVehicleAsset.CHARGER_CONNECTED.getName()))
+            && attributeEvent.<Boolean>getValue().orElse(false)) {
+            // Look for forced charge asset
+            if (forceChargeAssetIds.remove(attributeEvent.getAssetId())) {
+                LOG.fine("Previously force charged asset has now been disconnected so clearing force charge flag: " + attributeEvent.getAssetId());
+            }
+            return;
+        }
+
+        // Check for request to force charge
+        if (attributeName.equals(ElectricityStorageAsset.FORCE_CHARGE.getName())) {
+            Asset<?> asset = assetStorageService.find(attributeEvent.getAssetId());
+            if (!(asset instanceof ElectricityStorageAsset)) {
+                LOG.fine("Request to force charge asset will be ignored as asset not found or is not of type '" + ElectricityStorageAsset.class.getSimpleName() + "': " + attributeEvent.getAssetId());
+                return;
+            }
+
+            ElectricityStorageAsset storageAsset = (ElectricityStorageAsset) asset;
+
+            if (attributeEvent.<AttributeExecuteStatus>getValue().orElse(null) == AttributeExecuteStatus.REQUEST_START) {
+
+                double powerImportMax = storageAsset.getPowerImportMax().orElse(Double.MAX_VALUE);
+                double maxEnergyLevel = getElectricityStorageAssetEnergyLevelMax(storageAsset);
+                double currentEnergyLevel = storageAsset.getEnergyLevel().orElse(0d);
+                LOG.fine("Request to force charge asset '" + attributeEvent.getAssetId() + "': attempting to set powerSetpoint=" + powerImportMax);
+
+                if (forceChargeAssetIds.contains(attributeEvent.getAssetId())) {
+                    LOG.fine("Request to force charge asset will be ignored as force charge already requested for asset: " + storageAsset);
+                    return;
+                }
+
+                if (currentEnergyLevel >= maxEnergyLevel) {
+                    LOG.fine("Request to force charge asset will be ignored as asset is already at or above maxEnergyLevel: " + storageAsset);
+                    return;
+                }
+
+                forceChargeAssetIds.add(attributeEvent.getAssetId());
+                assetProcessingService.sendAttributeEvent(new AttributeEvent(storageAsset.getId(), ElectricityAsset.POWER_SETPOINT, powerImportMax));
+                assetProcessingService.sendAttributeEvent(new AttributeEvent(storageAsset.getId(), ElectricityStorageAsset.FORCE_CHARGE, AttributeExecuteStatus.RUNNING));
+
+            } else if (attributeEvent.<AttributeExecuteStatus>getValue().orElse(null) == AttributeExecuteStatus.REQUEST_CANCEL) {
+
+                if (forceChargeAssetIds.remove(attributeEvent.getAssetId())) {
+                    LOG.info("Request to cancel force charge asset: " + storageAsset.getId());
+                    assetProcessingService.sendAttributeEvent(new AttributeEvent(storageAsset.getId(), ElectricityAsset.POWER_SETPOINT, 0d));
+                    assetProcessingService.sendAttributeEvent(new AttributeEvent(storageAsset.getId(), ElectricityStorageAsset.FORCE_CHARGE, AttributeExecuteStatus.CANCELLED));
+                }
+            }
+        }
     }
 
+    protected double getElectricityStorageAssetEnergyLevelMax(ElectricityStorageAsset asset) {
+        double energyCapacity = asset.getEnergyCapacity().orElse(0d);
+        int maxEnergyLevelPercentage = asset.getEnergyLevelPercentageMax().orElse(100);
+        return energyCapacity * ((1d*maxEnergyLevelPercentage)/100d);
+    }
 
-    protected void startOptimisation(EnergyOptimisationAsset optimisationAsset) {
+    protected synchronized void processOptimisationAssetAttributeEvent(OptimisationInstance optimisationInstance, AttributeEvent attributeEvent) {
+
+        if (EnergyOptimisationAsset.FINANCIAL_SAVING.getName().equals(attributeEvent.getAttributeName())
+            || EnergyOptimisationAsset.CARBON_SAVING.getName().equals(attributeEvent.getAttributeName())) {
+            // These are updated by this service
+            return;
+        }
+
+
+        if (attributeEvent.getAttributeName().equals(EnergyOptimisationAsset.OPTIMISATION_DISABLED.getName())) {
+            boolean disabled = attributeEvent.<Boolean>getValue().orElse(false);
+            if (!disabled && assetOptimisationInstanceMap.containsKey(optimisationInstance.optimisationAsset.getId())) {
+                // Nothing to do here
+                return;
+            } else if (disabled && !assetOptimisationInstanceMap.containsKey(optimisationInstance.optimisationAsset.getId())) {
+                // Nothing to do here
+                return;
+            }
+        }
+
+        LOG.info("Processing optimisation asset attribute event: " + attributeEvent);
+        stopOptimisation(attributeEvent.getAssetId());
+
+        // Get latest asset from storage
+        EnergyOptimisationAsset asset = (EnergyOptimisationAsset) assetStorageService.find(attributeEvent.getAssetId());
+
+        if (asset != null && !asset.isOptimisationDisabled().orElse(false)) {
+            startOptimisation(asset);
+        }
+    }
+
+    protected synchronized void startOptimisation(EnergyOptimisationAsset optimisationAsset) {
         LOG.fine("Initialising optimiser for optimisation asset: " + optimisationAsset);
         double intervalSize = optimisationAsset.getIntervalSize().orElse(0.25d);
         int financialWeighting = optimisationAsset.getFinancialWeighting().orElse(100);
 
         try {
             EnergyOptimiser optimiser = new EnergyOptimiser(intervalSize, ((double) financialWeighting) / 100);
-            ScheduledFuture<?> runScheduler = scheduleOptimisation(optimisationAsset.getId(), optimiser);
-            assetEnergyOptimiserMap.put(optimisationAsset.getId(), new Pair<>(optimiser, runScheduler));
-        } catch (IllegalArgumentException e) {
+
+            long periodSeconds = (long) (optimiser.intervalSize * 60 * 60);
+
+            if (periodSeconds < 300) {
+                throw new IllegalStateException("Optimiser interval size is too small (minimum is 5 mins) for asset: " + optimisationAsset.getId());
+            }
+
+            long currentMillis = timerService.getCurrentTimeMillis();
+            Instant optimisationStartTime = getOptimisationStartTime(currentMillis, periodSeconds);
+
+            // Schedule subsequent runs
+            long offsetSeconds = (long) (Math.random() * 30) + periodSeconds;
+            Duration startDuration = Duration.between(Instant.ofEpochMilli(currentMillis), optimisationStartTime.plus(offsetSeconds, ChronoUnit.SECONDS));
+
+            ScheduledFuture<?> optimisationFuture = scheduleOptimisation(optimisationAsset.getId(), optimiser, startDuration, periodSeconds);
+            assetOptimisationInstanceMap.put(optimisationAsset.getId(), new OptimisationInstance(optimisationAsset, optimiser, optimisationFuture));
+
+            // Execute first optimisation at the period that started previous to now
+            LOG.finer(getLogPrefix(optimisationAsset.getId()) + "Running first optimisation for time '" + formatter.format(optimisationStartTime));
+
+            executorService.execute(() -> {
+                try {
+                    runOptimisation(optimisationAsset.getId(), optimisationStartTime);
+                } catch (Exception e) {
+                    LOG.log(Level.SEVERE, "Failed to run energy optimiser for asset: " + optimisationAsset.getId(), e);
+                }
+            });
+        } catch (Exception e) {
             LOG.log(Level.SEVERE, "Failed to start energy optimiser for asset: " + optimisationAsset, e);
         }
     }
 
-    protected void stopOptimisation(String optimisationAssetId) {
-        Pair<EnergyOptimiser, ScheduledFuture<?>> optimiserAndScheduler = assetEnergyOptimiserMap.remove(optimisationAssetId);
+    protected synchronized void stopOptimisation(String optimisationAssetId) {
+        OptimisationInstance optimisationInstance = assetOptimisationInstanceMap.remove(optimisationAssetId);
 
-        if (optimiserAndScheduler == null || optimiserAndScheduler.value == null) {
+        if (optimisationInstance == null || optimisationInstance.optimiserFuture == null) {
             return;
         }
 
         LOG.fine("Removing optimiser for optimisation asset: " + optimisationAssetId);
-
-        optimiserAndScheduler.value.cancel(false);
+        optimisationInstance.optimiserFuture.cancel(false);
     }
 
 
@@ -187,30 +327,19 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
      * NN:30+offset, NN:45+offset...It is important that intervals coincide with any change in supplier tariff so that
      * the optimisation works effectively.
      */
-    protected ScheduledFuture<?> scheduleOptimisation(String optimisationAssetId, EnergyOptimiser optimiser) throws IllegalStateException {
+    protected ScheduledFuture<?> scheduleOptimisation(String optimisationAssetId, EnergyOptimiser optimiser, Duration startDuration, long periodSeconds) throws IllegalStateException {
 
         if (optimiser == null) {
             throw new IllegalStateException("Optimiser instance not found for asset: " + optimisationAssetId);
         }
 
-        long periodSeconds = (long) (optimiser.intervalSize * 60 * 60);
-
-        if (periodSeconds < 300) {
-            throw new IllegalStateException("Optimiser interval size is too small (minimum is 5 mins) for asset: " + optimisationAssetId);
-        }
-
-        long currentMillis = timerService.getCurrentTimeMillis();
-        Instant optimisationStartTime = getOptimisationStartTime(currentMillis, periodSeconds);
-
-        // Execute first optimisation at this period to initialise the system
-        runOptimisation(optimisationAssetId, optimisationStartTime);
-
-        // Schedule subsequent runs
-        long offsetSeconds = (long) (Math.random() * 30);
-        Duration startDuration = Duration.between(Instant.ofEpochMilli(currentMillis), optimisationStartTime.plus(offsetSeconds, ChronoUnit.SECONDS));
-
-        return executorService.scheduleAtFixedRate(() ->
-            runOptimisation(optimisationAssetId, Instant.ofEpochMilli(timerService.getCurrentTimeMillis()).truncatedTo(ChronoUnit.MINUTES)),
+        return executorService.scheduleAtFixedRate(() -> {
+                try {
+                    runOptimisation(optimisationAssetId, Instant.ofEpochMilli(timerService.getCurrentTimeMillis()).truncatedTo(ChronoUnit.MINUTES));
+                } catch (Exception e) {
+                    LOG.log(Level.SEVERE, "Failed to run energy optimiser for asset: " + optimisationAssetId, e);
+                }
+            },
             startDuration.getSeconds(),
             periodSeconds,
             TimeUnit.SECONDS);
@@ -237,64 +366,144 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
         return "Optimisation '" + optimisationAssetId + "': ";
     }
 
+    protected void checkTimeoutAndThrow(String optimisationAssetId, long startTimeMillis) throws TimeoutException {
+        long runtime = timerService.getCurrentTimeMillis() - startTimeMillis;
+        if (runtime > OPTIMISATION_TIMEOUT_MILLIS) {
+            String logMsg = getLogPrefix(optimisationAssetId) + "Optimisation has been running for " + runtime + "ms, timeout is at " + OPTIMISATION_TIMEOUT_MILLIS + "ms";
+            LOG.warning(logMsg);
+            throw new TimeoutException(logMsg);
+        }
+    }
+
     /**
      * Runs the optimisation routine for the specified time; it is important that this method does not throw an
      * exception as it will cancel the scheduled task thus stopping future optimisations.
      */
-    protected void runOptimisation(String optimisationAssetId, Instant optimisationTime) {
-        Pair<EnergyOptimiser, ScheduledFuture<?>> optimiserAndScheduler = assetEnergyOptimiserMap.get(optimisationAssetId);
+    protected void runOptimisation(String optimisationAssetId, Instant optimisationTime) throws Exception {
+        OptimisationInstance optimisationInstance = assetOptimisationInstanceMap.get(optimisationAssetId);
 
-        if (optimiserAndScheduler == null) {
+        if (optimisationInstance == null) {
             return;
         }
 
         LOG.finer(getLogPrefix(optimisationAssetId) + "Running for time '" + formatter.format(optimisationTime));
 
-        EnergyOptimiser optimiser = optimiserAndScheduler.key;
+        long startTimeMillis = timerService.getCurrentTimeMillis();
+        EnergyOptimiser optimiser = optimisationInstance.energyOptimiser;
         int intervalCount = optimiser.get24HourIntervalCount();
+        double intervalSize = optimiser.getIntervalSize();
 
         LOG.finest(getLogPrefix(optimisationAssetId) + "Fetching child assets of type '" + ElectricitySupplierAsset.class.getSimpleName() + "'");
 
         List<ElectricitySupplierAsset> supplierAssets = assetStorageService.findAll(
-            new AssetQuery()
-                .select(new AssetQuery.Select().excludePath(true))
-                .types(ElectricitySupplierAsset.class)
-                .recursive(true)
-                .parents(optimisationAssetId)
-        ).stream()
+                new AssetQuery()
+                    .types(ElectricitySupplierAsset.class)
+                    .recursive(true)
+                    .parents(optimisationAssetId)
+            ).stream()
             .filter(asset -> asset.hasAttribute(ElectricitySupplierAsset.TARIFF_IMPORT))
-            .map(asset -> (ElectricitySupplierAsset)asset)
-            .collect(Collectors.toList());
+            .map(asset -> (ElectricitySupplierAsset) asset).toList();
 
         if (supplierAssets.size() != 1) {
             LOG.warning(getLogPrefix(optimisationAssetId) + "Expected exactly one " + ElectricitySupplierAsset.class.getSimpleName() + " asset with a '" + ElectricitySupplierAsset.TARIFF_IMPORT.getName() + "' attribute but found: " + supplierAssets.size());
             return;
         }
 
+        double[] powerNets = new double[intervalCount];
+        ElectricitySupplierAsset supplierAsset = supplierAssets.get(0);
+
         if (LOG.isLoggable(Level.FINEST)) {
-            LOG.finest(getLogPrefix(optimisationAssetId) + "Found child asset of type '" + ElectricitySupplierAsset.class.getSimpleName() + "': " + supplierAssets.get(0));
+            LOG.finest(getLogPrefix(optimisationAssetId) + "Found child asset of type '" + ElectricitySupplierAsset.class.getSimpleName() + "': " + supplierAsset);
+        }
+
+        // Do some basic validation
+        if (supplierAsset.getTariffImport().isPresent()) {
+            LOG.warning(getLogPrefix(optimisationAssetId) + ElectricitySupplierAsset.class.getSimpleName() + " asset '" + ElectricitySupplierAsset.TARIFF_IMPORT.getName() + "' attribute has no value");
         }
 
         LOG.finest(getLogPrefix(optimisationAssetId) + "Fetching optimisable child assets of type '" + ElectricityStorageAsset.class.getSimpleName() + "'");
 
-        AssetQuery query = new AssetQuery()
-            .select(new AssetQuery.Select().excludePath(true))
-            .recursive(true)
-            .parents(optimisationAssetId)
-            .types(ElectricityStorageAsset.class)
-            .attributes(new AttributePredicate().name(new StringPredicate(ElectricityAsset.POWER_SETPOINT.getName())));
-        query.attributes.groups = new ArrayList<>();
-        query.attributes.groups.add(
-            new LogicGroup<>(
-            LogicGroup.Operator.OR,
-            new AttributePredicate(ElectricityStorageAsset.SUPPORTS_IMPORT.getName(), new BooleanPredicate(true)),
-            new AttributePredicate(ElectricityStorageAsset.SUPPORTS_EXPORT.getName(), new BooleanPredicate(true)))
-        );
-
-        List<ElectricityStorageAsset> optimisableStorageAssets = assetStorageService.findAll(query).stream()
+        List<ElectricityStorageAsset> optimisableStorageAssets = assetStorageService.findAll(
+            new AssetQuery()
+                .recursive(true)
+                .parents(optimisationAssetId)
+                .types(ElectricityStorageAsset.class)
+                .attributes(
+                    new LogicGroup<>(
+                        LogicGroup.Operator.AND,
+                        Collections.singletonList(new LogicGroup<>(
+                            LogicGroup.Operator.OR,
+                            new AttributePredicate(ElectricityStorageAsset.SUPPORTS_IMPORT.getName(), new BooleanPredicate(true)),
+                            new AttributePredicate(ElectricityStorageAsset.SUPPORTS_EXPORT.getName(), new BooleanPredicate(true))
+                        )),
+                        new AttributePredicate().name(new StringPredicate(ElectricityAsset.POWER_SETPOINT.getName())))
+                )
+        )
+            .stream()
             .map(asset -> (ElectricityStorageAsset)asset)
+            .collect(Collectors.toList());
+
+        checkTimeoutAndThrow(optimisationAssetId, startTimeMillis);
+
+        List<ElectricityStorageAsset> finalOptimisableStorageAssets = optimisableStorageAssets;
+        optimisableStorageAssets = optimisableStorageAssets
+            .stream()
+            .filter(asset -> {
+
+                // Exclude force charged assets (so we don't mess with the setpoint)
+                if (forceChargeAssetIds.contains(asset.getId())) {
+                    LOG.finest("Optimisable asset was requested to force charge so it won't be optimised: " + asset.getId());
+                    @SuppressWarnings("OptionalGetWithoutIsPresent")
+                    Attribute<Double> powerAttribute = asset.getAttribute(ElectricityAsset.POWER).get();
+                    double[] powerLevels = get24HAttributeValues(asset.getId(), powerAttribute, optimiser.getIntervalSize(), intervalCount, optimisationTime);
+                    IntStream.range(0, intervalCount).forEach(i -> powerNets[i] += powerLevels[i]);
+
+                    double currentEnergyLevel = asset.getEnergyLevel().orElse(0d);
+                    double maxEnergyLevel = getElectricityStorageAssetEnergyLevelMax(asset);
+                    if (currentEnergyLevel >= maxEnergyLevel) {
+                        LOG.info("Force charged asset has reached maxEnergyLevelPercentage so stopping charging: " + asset.getId());
+                        forceChargeAssetIds.remove(asset.getId());
+                        assetProcessingService.sendAttributeEvent(
+                            new AttributeEvent(asset.getId(), ElectricityStorageAsset.POWER_SETPOINT, 0d)
+                        );
+                        assetProcessingService.sendAttributeEvent(new AttributeEvent(asset.getId(), ElectricityStorageAsset.FORCE_CHARGE, AttributeExecuteStatus.COMPLETED));
+                    }
+                    return false;
+                }
+
+                if (asset instanceof ElectricityChargerAsset) {
+                    // Check if it has a child vehicle asset
+                    return finalOptimisableStorageAssets.stream()
+                        .noneMatch(a -> {
+                                if (a instanceof ElectricVehicleAsset && a.getParentId().equals(asset.getId())) {
+                                // Take the lowest power max from vehicle or charger
+                                double vehiclePowerImportMax = a.getPowerImportMax().orElse(Double.MAX_VALUE);
+                                double vehiclePowerExportMax = a.getPowerExportMax().orElse(Double.MAX_VALUE);
+                                double chargerPowerImportMax = asset.getPowerImportMax().orElse(Double.MAX_VALUE);
+                                double chargerPowerExportMax = asset.getPowerExportMax().orElse(Double.MAX_VALUE);
+                                double smallestPowerImportMax = Math.min(vehiclePowerImportMax, chargerPowerImportMax);
+                                double smallestPowerExportMax = Math.min(vehiclePowerExportMax, chargerPowerExportMax);
+
+                                if (smallestPowerImportMax < vehiclePowerImportMax) {
+                                    LOG.fine("Reducing vehicle power import max due to connected charger limit: vehicle=" + a.getId() + ", oldPowerImportMax=" + vehiclePowerImportMax + ", newPowerImportMax=" + smallestPowerImportMax);
+                                    a.setPowerImportMax(smallestPowerImportMax);
+                                }
+                                if (smallestPowerExportMax < vehiclePowerExportMax) {
+                                    LOG.fine("Reducing vehicle power Export max due to connected charger limit: vehicle=" + a.getId() + ", oldPowerExportMax=" + vehiclePowerExportMax + ", newPowerExportMax=" + smallestPowerExportMax);
+                                    a.setPowerExportMax(smallestPowerExportMax);
+                                }
+                                LOG.finest("Excluding charger from optimisable assets and child vehicle will be used instead: " + asset.getId());
+                                return true;
+                            }
+                            return false;
+                        });
+                }
+                return true;
+            })
             .sorted(Comparator.comparingInt(asset -> asset.getEnergyLevelSchedule().map(schedule -> 0).orElse(1)))
             .collect(Collectors.toList());
+
+        checkTimeoutAndThrow(optimisationAssetId, startTimeMillis);
 
         if (optimisableStorageAssets.isEmpty()) {
             LOG.warning(getLogPrefix(optimisationAssetId) + "Expected at least one optimisable '" + ElectricityStorageAsset.class.getSimpleName() + " asset with a '" + ElectricityAsset.POWER_SETPOINT.getName() + "' attribute but found none");
@@ -305,22 +514,18 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
             LOG.finest(getLogPrefix(optimisationAssetId) + "Found optimisable child assets of type '" + ElectricityStorageAsset.class.getSimpleName() + "': " + optimisableStorageAssets.stream().map(Asset::getId).collect(Collectors.joining(", ")));
         }
 
-        // Get consumers and producers and sum power demand for the next 24hrs
-        double[] powerNets = new double[intervalCount];
-
-        LOG.finest(getLogPrefix(optimisationAssetId) + "Fetching child assets of type '" + ElectricityProducerAsset.class.getSimpleName() + "', '" + ElectricityConsumerAsset.class.getSimpleName() + "', '" + GroupAsset.class.getSimpleName() + "' (with child type of consumer or producer)");
+        LOG.finest(getLogPrefix(optimisationAssetId) + "Fetching plain consumer and producer child assets of type '" + ElectricityProducerAsset.class.getSimpleName() + "', '" + ElectricityConsumerAsset.class.getSimpleName() + "', '" + ElectricityStorageAsset.class.getSimpleName() + "'");
 
         AtomicInteger count = new AtomicInteger(0);
         assetStorageService.findAll(
             new AssetQuery()
-                .select(new AssetQuery.Select().excludePath(true))
                 .recursive(true)
                 .parents(optimisationAssetId)
-                .types(ElectricityConsumerAsset.class, ElectricityProducerAsset.class, GroupAsset.class)
+                .types(ElectricityConsumerAsset.class, ElectricityProducerAsset.class)
                 .attributes(new AttributePredicate().name(new StringPredicate(ElectricityAsset.POWER.getName())))
         )
-            .stream()
-            .filter(asset -> !(asset instanceof GroupAsset) || isElectricityGroupAsset(asset))
+            //.stream()
+            //.filter(asset -> !(asset instanceof GroupAsset) || isElectricityGroupAsset(asset))
             .forEach(asset -> {
                 @SuppressWarnings("OptionalGetWithoutIsPresent")
                 Attribute<Double> powerAttribute = asset.getAttribute(ElectricityAsset.POWER).get();
@@ -329,14 +534,65 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
                 count.incrementAndGet();
             });
 
-        if (LOG.isLoggable(Level.FINEST)) {
-            LOG.finest(getLogPrefix(optimisationAssetId) + "Found child assets of type '" + ElectricityProducerAsset.class.getSimpleName() + "', '" + ElectricityConsumerAsset.class.getSimpleName() + "', '" + GroupAsset.class.getSimpleName() + "' (with child type of consumer or producer): count=" + count.get());
-            LOG.finest("Calculated net power of consumers and producers: " + Arrays.toString(powerNets));
-            LOG.finest("Getting supply costs for each interval");
+        checkTimeoutAndThrow(optimisationAssetId, startTimeMillis);
+
+        // Get power of storage assets that don't support neither import or export (treat them as plain consumers/producers)
+        List<ElectricityStorageAsset> plainStorageAssets = assetStorageService.findAll(
+                new AssetQuery()
+                    .recursive(true)
+                    .parents(optimisationAssetId)
+                    .types(ElectricityStorageAsset.class)
+                    .attributes(
+                        new AttributePredicate().name(new StringPredicate(ElectricityAsset.POWER.getName())),
+                        new AttributePredicate(ElectricityStorageAsset.SUPPORTS_IMPORT.getName(), new BooleanPredicate(true), true, null),
+                        new AttributePredicate(ElectricityStorageAsset.SUPPORTS_EXPORT.getName(), new BooleanPredicate(true), true, null)
+                    )
+            )
+            .stream()
+            .map(asset -> (ElectricityStorageAsset) asset).toList();
+
+        checkTimeoutAndThrow(optimisationAssetId, startTimeMillis);
+
+        // Exclude chargers with a power value != 0 and a child vehicle with a power value != 0 (avoid double counting - vehicle takes priority)
+        plainStorageAssets
+            .stream()
+            .filter(asset -> {
+                if (asset instanceof ElectricityChargerAsset) {
+                    // Check if it has a child vehicle asset also check optimisable assets as child vehicle could be in there
+                    return plainStorageAssets.stream()
+                        .noneMatch(a -> {
+                            if (a instanceof ElectricVehicleAsset && a.getParentId().equals(asset.getId())) {
+                                LOG.finest("Excluding charger from plain consumer/producer calculations to avoid double counting power: " + asset.getId());
+                                return true;
+                            }
+                            return false;
+                        }) && finalOptimisableStorageAssets.stream()
+                        .noneMatch(a -> {
+                            if (a instanceof ElectricVehicleAsset && a.getParentId().equals(asset.getId())) {
+                                LOG.finest("Excluding charger from plain consumer/producer calculations to avoid double counting power: " + asset.getId());
+                                return true;
+                            }
+                            return false;
+                        });
+                }
+                return true;
+            })
+            .forEach(asset -> {
+                @SuppressWarnings("OptionalGetWithoutIsPresent")
+                Attribute<Double> powerAttribute = asset.getAttribute(ElectricityAsset.POWER).get();
+                double[] powerLevels = get24HAttributeValues(asset.getId(), powerAttribute, optimiser.getIntervalSize(), intervalCount, optimisationTime);
+                IntStream.range(0, intervalCount).forEach(i -> powerNets[i] += powerLevels[i]);
+                count.incrementAndGet();
+            });
+
+        checkTimeoutAndThrow(optimisationAssetId, startTimeMillis);
+
+        if (LOG.isLoggable(Level.FINER)) {
+            LOG.finer(getLogPrefix(optimisationAssetId) + "Found plain consumer and producer child assets count=" + count.get());
+            LOG.finer("Calculated net power of consumers and producers: " + Arrays.toString(powerNets));
         }
 
         // Get supplier costs for each interval
-        ElectricitySupplierAsset supplierAsset = supplierAssets.get(0);
         double financialWeightingImport = optimiser.getFinancialWeighting();
         double financialWeightingExport = optimiser.getFinancialWeighting();
 
@@ -363,30 +619,36 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
             }
         }
 
-        if (LOG.isLoggable(Level.FINEST)) {
+        if (LOG.isLoggable(Level.FINER)) {
             LOG.finer(getLogPrefix(optimisationAssetId) + "Import costs: " + Arrays.toString(costsImport));
             LOG.finer(getLogPrefix(optimisationAssetId) + "Export costs: " + Arrays.toString(costsExport));
         }
 
+        // Savings variables
+        List<String> obsoleteUnoptimisedAssetIds = new ArrayList<>(optimisationInstance.unoptimisedStorageAssetEnergyLevels.keySet());
+        double unoptimisedPower = powerNets[0];
+        double financialCost = 0d;
+        double carbonCost = 0d;
+        double unoptimisedFinancialCost = 0d;
+        double unoptimisedCarbonCost = 0d;
+
         // Optimise storage assets with priority on storage assets with an energy schedule (already sorted above)
-        double importPowerMax = Math.min(supplierAsset.getPowerImportMax().orElse(Double.MAX_VALUE), supplierAsset.getPowerImportMax().orElse(Double.MAX_VALUE));
-        double exportPowerMax = -1 * Math.min(supplierAsset.getPowerExportMax().orElse(Double.MAX_VALUE), supplierAsset.getPowerExportMax().orElse(Double.MAX_VALUE));
+        double importPowerMax = supplierAsset.getPowerImportMax().orElse(Double.MAX_VALUE);
+        double exportPowerMax = -1 * supplierAsset.getPowerExportMax().orElse(Double.MAX_VALUE);
         double[] importPowerMaxes = new double[intervalCount];
         double[] exportPowerMaxes = new double[intervalCount];
         Arrays.fill(importPowerMaxes, importPowerMax);
         Arrays.fill(exportPowerMaxes, exportPowerMax);
         long periodSeconds = (long)(optimiser.getIntervalSize()*60*60);
 
-        LOG.finer(getLogPrefix(optimisationAssetId) + "Optimising each storage asset");
-
         for (ElectricityStorageAsset storageAsset : optimisableStorageAssets) {
             boolean hasSetpoint = storageAsset.hasAttribute(ElectricityStorageAsset.POWER_SETPOINT);
             boolean supportsExport = storageAsset.isSupportsExport().orElse(false);
             boolean supportsImport = storageAsset.isSupportsImport().orElse(false);
 
-            if (LOG.isLoggable(Level.FINEST)) {
-                LOG.finest("Optimising power set points for storage asset: " + storageAsset);
-            }
+            checkTimeoutAndThrow(optimisationAssetId, startTimeMillis);
+
+            LOG.finer(getLogPrefix(optimisationAssetId) + "Optimising power set points for storage asset: " + storageAsset);
 
             if (!supportsExport && !supportsImport) {
                 LOG.finest(getLogPrefix(optimisationAssetId) + "Storage asset doesn't support import or export: " + storageAsset.getId());
@@ -398,12 +660,71 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
                 continue;
             }
 
-            double[] setpoints = getStoragePowerSetpoints(optimiser, optimisationAssetId, storageAsset, powerNets, importPowerMaxes, exportPowerMaxes, costsImport, costsExport);
+            double energyCapacity = storageAsset.getEnergyCapacity().orElse(0d);
+            double energyLevel = Math.min(energyCapacity, storageAsset.getEnergyLevel().orElse(-1d));
+
+            if (energyCapacity <= 0d || energyLevel < 0) {
+                LOG.info(getLogPrefix(optimisationAssetId) + "Storage asset has no capacity or energy level so cannot import or export energy: " + storageAsset.getId());
+                continue;
+            }
+
+            double energyLevelMax = Math.min(energyCapacity, ((double) storageAsset.getEnergyLevelPercentageMax().orElse(100) / 100) * energyCapacity);
+            double energyLevelMin = Math.min(energyCapacity, ((double) storageAsset.getEnergyLevelPercentageMin().orElse(0) / 100) * energyCapacity);
+            double[] energyLevelMins = new double[intervalCount];
+            double[] energyLevelMaxs = new double[intervalCount];
+            Arrays.fill(energyLevelMins, energyLevelMin);
+            Arrays.fill(energyLevelMaxs, energyLevelMax);
+
+            // Does the storage support import and have an energy level schedule
+            Optional<Integer[][]> energyLevelScheduleOptional = storageAsset.getEnergyLevelSchedule();
+            boolean hasEnergyMinRequirement = energyLevelMin > 0 || energyLevelScheduleOptional.isPresent();
+            double powerExportMax = storageAsset.getPowerExportMax().map(power -> -1*power).orElse(Double.MIN_VALUE);
+            double powerImportMax = storageAsset.getPowerImportMax().orElse(Double.MAX_VALUE);
+            int[][] energySchedule = energyLevelScheduleOptional.map(dayArr -> Arrays.stream(dayArr).map(hourArr -> Arrays.stream(hourArr).mapToInt(i -> i != null ? i : 0).toArray()).toArray(int[][]::new)).orElse(null);
+
+            if (energySchedule != null) {
+                LOG.finer(getLogPrefix(optimisationAssetId) + "Applying energy schedule for storage asset: " + storageAsset.getId());
+                optimiser.applyEnergySchedule(energyLevelMins, energyLevelMaxs, energyCapacity, energySchedule, LocalDateTime.ofInstant(Instant.ofEpochMilli(timerService.getCurrentTimeMillis()), ZoneId.systemDefault()));
+            }
+
+            double maxEnergyLevelMin = Arrays.stream(energyLevelMins).max().orElse(0);
+            boolean isConnected = storageAssetConnected(storageAsset);
+
+            // TODO: Make these a function of energy level
+            Function<Integer, Double> powerImportMaxCalculator = interval -> interval == 0 && !isConnected ? 0 : powerImportMax;
+            Function<Integer, Double> powerExportMaxCalculator = interval -> interval == 0 && !isConnected ? 0 : powerExportMax;
+
+            if (hasEnergyMinRequirement) {
+                LOG.finer(getLogPrefix(optimisationAssetId) + "Normalising min energy requirements for storage asset: " + storageAsset.getId());
+                optimiser.normaliseEnergyMinRequirements(energyLevelMins, powerImportMaxCalculator, powerExportMaxCalculator, energyLevel);
+                if (LOG.isLoggable(Level.FINEST)) {
+                    LOG.finest(getLogPrefix(optimisationAssetId) + "Min energy requirements for storage asset '" + storageAsset.getId() + "': " + Arrays.toString(energyLevelMins));
+                }
+            }
+
+            // Calculate the power setpoints for this asset and update power net values for each interval
+            double[] setpoints = getStoragePowerSetpoints(optimisationInstance, storageAsset, energyLevelMins, energyLevelMaxs, powerNets, importPowerMaxes, exportPowerMaxes, costsImport, costsExport);
 
             if (setpoints != null) {
 
                 // Assume these setpoints will be applied so update the power net values with these
                 for (int i = 0; i < powerNets.length; i++) {
+
+                    if (i == 0) {
+                        if (!storageAssetConnected(storageAsset)) {
+                            LOG.finer("Optimised storage asset not connected so interval 0 will not be counted or actioned: " + storageAsset.getId());
+                            setpoints[i] = 0;
+                            continue;
+                        }
+
+                        // Update savings/cost data with costs specific to this asset
+                        if (setpoints[i] > 0) {
+                            financialCost += storageAsset.getTariffImport().orElse(0d) * setpoints[i] * intervalSize;
+                        } else {
+                            financialCost += storageAsset.getTariffExport().orElse(0d) * -1 * setpoints[i] * intervalSize;
+                        }
+                    }
+
                     powerNets[i] += setpoints[i];
                 }
 
@@ -414,12 +735,42 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
                 ).collect(Collectors.toList());
 
                 assetPredictedDatapointService.updateValues(storageAsset.getId(), ElectricityAsset.POWER_SETPOINT.getName(), valuesAndTimestamps);
-            }else {
-                LOG.finest("Cannot optimise power set points for storage asset: " + storageAsset.getId());
             }
 
             assetProcessingService.sendAttributeEvent(new AttributeEvent(storageAsset.getId(), ElectricityAsset.POWER_SETPOINT, setpoints != null ? setpoints[0] : null));
+
+            // Update unoptimised power for this asset
+            obsoleteUnoptimisedAssetIds.remove(storageAsset.getId());
+            double assetUnoptimisedPower = getStorageUnoptimisedImportPower(optimisationInstance, optimisationAssetId, storageAsset, maxEnergyLevelMin, Math.max(0, powerImportMax - unoptimisedPower));
+            unoptimisedPower += assetUnoptimisedPower;
+            unoptimisedFinancialCost += storageAsset.getTariffImport().orElse(0d) * assetUnoptimisedPower * intervalSize;
         }
+
+        // Clear out un-optimised data for not found assets
+        obsoleteUnoptimisedAssetIds.forEach(optimisationInstance.unoptimisedStorageAssetEnergyLevels.keySet()::remove);
+
+        // Calculate and store savings data
+        carbonCost = (powerNets[0] >= 0 ? supplierAsset.getCarbonImport().orElse(0d) : -1 * supplierAsset.getCarbonExport().orElse(0d)) * powerNets[0] * intervalSize;
+        financialCost += (powerNets[0] >= 0 ? supplierAsset.getTariffImport().orElse(0d) : -1 * supplierAsset.getTariffExport().orElse(0d)) * powerNets[0] * intervalSize;
+        unoptimisedCarbonCost = (unoptimisedPower >= 0 ? supplierAsset.getCarbonImport().orElse(0d) : -1 * supplierAsset.getCarbonExport().orElse(0d)) * unoptimisedPower * intervalSize;
+        unoptimisedFinancialCost += (unoptimisedPower >= 0 ? supplierAsset.getTariffImport().orElse(0d) : -1 * supplierAsset.getTariffExport().orElse(0d)) * unoptimisedPower * intervalSize;
+
+        double financialSaving = unoptimisedFinancialCost - financialCost;
+        double carbonSaving = unoptimisedCarbonCost - carbonCost;
+
+        LOG.info(getLogPrefix(optimisationAssetId) + "Current interval financial saving = " + financialSaving);
+        LOG.info(getLogPrefix(optimisationAssetId) + "Current interval carbon saving = " + carbonSaving);
+
+        financialSaving += optimisationInstance.optimisationAsset.getFinancialSaving().orElse(0d);
+        carbonSaving += optimisationInstance.optimisationAsset.getCarbonSaving().orElse(0d);
+
+        // Update in memory asset
+        optimisationInstance.optimisationAsset.setFinancialSaving(financialSaving);
+        optimisationInstance.optimisationAsset.setCarbonSaving(carbonSaving);
+
+        // Push new values into the DB
+        assetProcessingService.sendAttributeEvent(new AttributeEvent(optimisationAssetId, EnergyOptimisationAsset.FINANCIAL_SAVING, financialSaving));
+        assetProcessingService.sendAttributeEvent(new AttributeEvent(optimisationAssetId, EnergyOptimisationAsset.CARBON_SAVING, carbonSaving));
     }
 
     protected boolean isElectricityGroupAsset(Asset<?> asset) {
@@ -427,7 +778,7 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
             return false;
         }
 
-        Class<?> assetClass = AssetModelUtil
+        Class<?> assetClass = ValueUtil
             .getAssetDescriptor(((GroupAsset)asset).getChildAssetType().orElse(null))
             .map(AssetDescriptor::getType)
             .orElse(null);
@@ -450,19 +801,45 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
             LocalDateTime timestamp = LocalDateTime.ofInstant(optimisationTime, ZoneId.systemDefault());
             ValueDatapoint<?>[] predictedData = assetPredictedDatapointService.getValueDatapoints(
                 ref,
-                "minute",
-                (long)(intervalSize * 60) + " minute",
+                DatapointInterval.MINUTE,
+                (int)(intervalSize * 60),
                 timestamp,
                 timestamp.plus(24, HOURS).minus((long)(intervalSize * 60), ChronoUnit.MINUTES)
             );
             if (predictedData.length != values.length) {
                 LOG.warning("Returned predicted data point count does not match interval count: Ref=" + ref + ", expected=" + values.length + ", actual=" + predictedData.length);
             } else {
-                IntStream.range(0, predictedData.length).forEach(i ->
-                    values[i] = predictedData[i].getValue() != null ? (double)(Object)predictedData[i].getValue() : 0d);
+
+                IntStream.range(0, predictedData.length).forEach(i -> {
+                    if (predictedData[i].getValue() != null) {
+                        values[i] = (double) (Object) predictedData[i].getValue();
+                    } else {
+                        // Average previous and next values to fill in gaps (goes up to 5 back and forward) - this fixes
+                        // issues with resolution differences between stored predicted data and optimisation interval
+                        Double previous = null;
+                        Double next = null;
+                        int j = i-1;
+                        while (previous == null && j >= 0) {
+                           previous = (Double) predictedData[j].getValue();
+                           j--;
+                        }
+                        j = i+1;
+                        while (next == null && j < predictedData.length) {
+                            next = (Double) predictedData[j].getValue();
+                            j++;
+                        }
+                        if (next == null) {
+                            next = previous;
+                        }
+                        if (previous == null) {
+                            previous = next;
+                        }
+                        if (next != null) {
+                            values[i] = (previous + next) / 2;
+                        }
+                    }
+                });
             }
-        } else {
-            LOG.finer("Electricity asset doesn't have any predicted data for attribute: Ref=" + ref);
         }
 
         values[0] = attribute.getValue().orElse(0d);
@@ -476,9 +853,20 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
      * parameters should be updated when the system changes and not replaced so that references maintained by the
      * calculator are valid and up to date.
      */
-    protected double[] getStoragePowerSetpoints(EnergyOptimiser optimiser, String optimisationAssetId, ElectricityStorageAsset storageAsset, double[] powerNets, double[] importPowerLimits, double[] exportPowerLimits, double[] costImports, double[] costExports) {
+    protected double[] getStoragePowerSetpoints(
+        OptimisationInstance optimisationInstance,
+        ElectricityStorageAsset storageAsset,
+        double[] normalisedEnergyLevelMins,
+        double[] energyLevelMaxs,
+        double[] powerNets,
+        double[] importPowerLimits,
+        double[] exportPowerLimits,
+        double[] costImports,
+        double[] costExports) {
 
-        int intervalCount = powerNets.length;
+        EnergyOptimiser optimiser = optimisationInstance.energyOptimiser;
+        String optimisationAssetId = optimisationInstance.optimisationAsset.getId();
+        int intervalCount = optimiser.get24HourIntervalCount();
         boolean supportsExport = storageAsset.isSupportsExport().orElse(false);
         boolean supportsImport = storageAsset.isSupportsImport().orElse(false);
 
@@ -486,39 +874,13 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
 
         double energyCapacity = storageAsset.getEnergyCapacity().orElse(0d);
         double energyLevel = Math.min(energyCapacity, storageAsset.getEnergyLevel().orElse(-1d));
-
-        if (energyCapacity <= 0d || energyLevel < 0) {
-            LOG.info(getLogPrefix(optimisationAssetId) + "Storage asset has no capacity or energy level so cannot import or export energy: " + storageAsset.getId());
-            return null;
-        }
-
-        double energyLevelMax = Math.min(energyCapacity, ((double) storageAsset.getEnergyLevelPercentageMax().orElse(100) / 100) * energyCapacity);
-        double energyLevelMin = Math.min(energyCapacity, ((double) storageAsset.getEnergyLevelPercentageMin().orElse(0) / 100) * energyCapacity);
-        double[] energyLevelMins = new double[intervalCount];
-        double[] energyLevelMaxs = new double[intervalCount];
-        Arrays.fill(energyLevelMins, energyLevelMin);
-        Arrays.fill(energyLevelMaxs, energyLevelMax);
-
-        // Does the storage support import and have an energy level schedule
-        Optional<Integer[][]> energyLevelScheduleOptional = storageAsset.getEnergyLevelSchedule();
-        boolean hasEnergyMinRequirement = energyLevelMin > 0 || energyLevelScheduleOptional.isPresent();
         double powerExportMax = storageAsset.getPowerExportMax().map(power -> -1*power).orElse(Double.MIN_VALUE);
         double powerImportMax = storageAsset.getPowerImportMax().orElse(Double.MAX_VALUE);
-        int[][] energySchedule = energyLevelScheduleOptional.map(dayArr -> Arrays.stream(dayArr).map(hourArr -> Arrays.stream(hourArr).mapToInt(Integer::intValue).toArray()).toArray(int[][]::new)).orElse(null);
-
-        if (energySchedule != null) {
-            LOG.finer(getLogPrefix(optimisationAssetId) + "Applying energy schedule for storage asset: " + storageAsset.getId());
-            optimiser.applyEnergySchedule(energyLevelMins, energyLevelMaxs, energyCapacity, energySchedule, LocalDateTime.ofInstant(Instant.ofEpochMilli(timerService.getCurrentTimeMillis()), ZoneId.systemDefault()));
-        }
+        boolean isConnected = storageAssetConnected(storageAsset);
 
         // TODO: Make these a function of energy level
-        Function<Integer, Double> powerImportMaxCalculator = interval -> powerImportMax;
-        Function<Integer, Double> powerExportMaxCalculator = interval -> powerExportMax;
-
-        if (hasEnergyMinRequirement) {
-            LOG.finer(getLogPrefix(optimisationAssetId) + "Normalising min energy requirements for storage asset: " + storageAsset.getId());
-            optimiser.normaliseEnergyMinRequirements(energyLevelMins, powerImportMaxCalculator, powerExportMaxCalculator, energyLevel);
-        }
+        Function<Integer, Double> powerImportMaxCalculator = interval -> interval == 0 && !isConnected ? 0 : powerImportMax;
+        Function<Integer, Double> powerExportMaxCalculator = interval -> interval == 0 && !isConnected ? 0 : powerExportMax;
 
         double[][] exportCostAndPower = null;
         double[][] importCostAndPower = null;
@@ -546,28 +908,67 @@ public class EnergyOptimisationService extends RouteBuilder implements Container
             importCostAndPower = IntStream.range(0, intervalCount).mapToObj(it -> importOptimiser.apply(it, new double[]{0d, powerImportMax}))
                 .toArray(double[][]::new);
 
+            boolean hasEnergyMinRequirement = Arrays.stream(normalisedEnergyLevelMins).anyMatch(el -> el > 0);
+
             if (hasEnergyMinRequirement) {
                 LOG.finer(getLogPrefix(optimisationAssetId) + "Applying imports to achieve min energy level requirements for storage asset: " + storageAsset.getId());
-                optimiser.applyEnergyMinImports(importCostAndPower, energyLevelMins, powerSetpoints, energyLevelCalculator, importOptimiser, powerImportMaxCalculator);
+                optimiser.applyEnergyMinImports(importCostAndPower, normalisedEnergyLevelMins, powerSetpoints, energyLevelCalculator, importOptimiser, powerImportMaxCalculator);
+                if (LOG.isLoggable(Level.FINEST)) {
+                    LOG.finest(getLogPrefix(optimisationAssetId) + "Setpoints to achieve min energy level requirements for storage asset '" + storageAsset.getId() + "': " + Arrays.toString(powerSetpoints));
+                }
             }
         }
 
-        LOG.finer(getLogPrefix(optimisationAssetId) + "Applying earning opportunities for storage asset: " + storageAsset.getId());
-        optimiser.applyEarningOpportunities(importCostAndPower, exportCostAndPower, energyLevelMins, energyLevelMaxs, powerSetpoints, energyLevelCalculator, powerImportMaxCalculator, powerExportMaxCalculator);
+        optimiser.applyEarningOpportunities(importCostAndPower, exportCostAndPower, normalisedEnergyLevelMins, energyLevelMaxs, powerSetpoints, energyLevelCalculator, powerImportMaxCalculator, powerExportMaxCalculator);
+
         if (LOG.isLoggable(Level.FINER)) {
-            LOG.finer(getLogPrefix(optimisationAssetId) + "Calculated earning opportunity power set points = " + Arrays.toString(powerSetpoints));
-
-            double[][] finalImportCostAndPower = importCostAndPower;
-            double[][] finalExportCostAndPower = exportCostAndPower;
-            double totalCost = IntStream.range(0, powerSetpoints.length).mapToDouble(i -> {
-                double setpoint = powerSetpoints[i];
-                double cost = setpoint < 0d ? finalExportCostAndPower[i][0] : finalImportCostAndPower[i][0];
-                return cost * setpoint;
-            }).reduce(0, Double::sum);
-
-            LOG.finer(getLogPrefix(optimisationAssetId) + "Calculated earning opportunity cost = " + totalCost);
+            LOG.finer(getLogPrefix(optimisationAssetId) + "Calculated earning opportunity power set points for storage asset '" + storageAsset.getId() + "': " + Arrays.toString(powerSetpoints));
         }
 
         return powerSetpoints;
+    }
+
+    protected boolean storageAssetConnected(ElectricityStorageAsset storageAsset) {
+        if (storageAsset instanceof ElectricVehicleAsset) {
+            return ((ElectricVehicleAsset)storageAsset).getChargerConnected().orElse(false);
+        }
+        if (storageAsset instanceof ElectricityChargerAsset) {
+            return ((ElectricityChargerAsset)storageAsset).getVehicleConnected().orElse(false);
+        }
+        return true;
+    }
+
+    /**
+     * Gets the un-optimised import power for the first (current) interval for the supplied storage asset
+     */
+    protected double getStorageUnoptimisedImportPower(OptimisationInstance optimisationInstance, String optimisationAssetId, ElectricityStorageAsset storageAsset, double energyLevelTarget, double remainingPowerCapacity) {
+
+        double intervalSize = optimisationInstance.energyOptimiser.getIntervalSize();
+        boolean isConnected = storageAssetConnected(storageAsset);
+
+        if (!isConnected) {
+            optimisationInstance.unoptimisedStorageAssetEnergyLevels.remove(storageAsset.getId());
+            return 0;
+        }
+
+        // Get current energy level from map or directly from the asset
+        double energyLevel = optimisationInstance.unoptimisedStorageAssetEnergyLevels.get(storageAsset.getId()) != null ? optimisationInstance.unoptimisedStorageAssetEnergyLevels.get(storageAsset.getId()) : storageAsset.getEnergyLevel().orElse(-1d);
+
+        if (energyLevel < 0) {
+            LOG.finest(getLogPrefix(optimisationAssetId) + "Storage asset has no energy level so cannot calculate un-optimised power demand: " + storageAsset.getId());
+            return 0;
+        }
+
+        // Calculate power
+        double powerImportMax = storageAsset.getPowerImportMax().orElse(Double.MAX_VALUE);
+        double remainingEnergy = Math.max(0, energyLevelTarget - energyLevel);
+        double toFillPower = remainingEnergy / intervalSize;
+        double power = Math.min(Math.min(toFillPower, powerImportMax), remainingPowerCapacity);
+
+        // Update energy level using previous interval power
+        energyLevel += power * intervalSize;
+        optimisationInstance.unoptimisedStorageAssetEnergyLevels.put(storageAsset.getId(), energyLevel);
+
+        return power;
     }
 }
